@@ -84,17 +84,17 @@ public class ControlFlowDistanceMetric implements DistanceMetric {
       replace.add(distanceHelper.cleanPath(pCFAEdges));
     }
     successfulGeneratedPath = replace;
-    successfulGeneratedPath.removeIf(c -> c.isEmpty());
+    successfulGeneratedPath.removeIf(List::isEmpty);
 
-    if (successfulGeneratedPath.stream().allMatch(c -> c.isEmpty())) {
+    if (successfulGeneratedPath.stream().allMatch(List::isEmpty)) {
       return;
     }
 
     // default location is 0 - the first node
     int locationOfLastChangedNode = 0;
 
-    List<CFAEdge> firstGeneratedPath = successfulGeneratedPath.get(0);
-    CFANode firstNodeOfSafePath = firstGeneratedPath.get(0).getPredecessor();
+    List<CFAEdge> firstGeneratedPath = successfulGeneratedPath.getFirst();
+    CFANode firstNodeOfSafePath = firstGeneratedPath.getFirst().getPredecessor();
 
     int spRootNodeNumber = firstNodeOfSafePath.getEnteringEdge(0).getPredecessor().getNodeNumber();
 
@@ -115,13 +115,13 @@ public class ControlFlowDistanceMetric implements DistanceMetric {
     // check the number of the successfulGeneratedPath
     List<CFAEdge> finalGeneratedPath;
     if (successfulGeneratedPath.size() == 1) {
-      finalGeneratedPath = successfulGeneratedPath.get(0);
+      finalGeneratedPath = successfulGeneratedPath.getFirst();
     } else if (successfulGeneratedPath.size() > 1) {
       finalGeneratedPath = comparePaths(branchesCe, successfulGeneratedPath);
       if (finalGeneratedPath == null) {
         // Case the control flow distance metric couldn't find any differences
         // because the paths are too short
-        finalGeneratedPath = successfulGeneratedPath.get(0);
+        finalGeneratedPath = successfulGeneratedPath.getFirst();
       }
     } else {
       return;
@@ -192,21 +192,11 @@ public class ControlFlowDistanceMetric implements DistanceMetric {
     PathDistancePair<CFAEdge, Event> closest =
         Collections.min(
             pDistancePairs,
-            new Comparator<PathDistancePair<CFAEdge, Event>>() {
-              @Override
-              public int compare(
-                  PathDistancePair<CFAEdge, Event> a, PathDistancePair<CFAEdge, Event> b) {
-                int aSum =
-                    a.getDistances().stream()
-                        .map(e -> e.getDistanceFromTheEnd())
-                        .reduce(0, Integer::sum);
-                int bSum =
-                    b.getDistances().stream()
-                        .map(e -> e.getDistanceFromTheEnd())
-                        .reduce(0, Integer::sum);
-                return Integer.compare(aSum, bSum);
-              }
-            });
+            Comparator.comparingInt(
+                distancePair ->
+                    distancePair.getDistances().stream()
+                        .mapToInt(Event::getDistanceFromTheEnd)
+                        .sum()));
 
     return closest.getPath();
   }
@@ -287,12 +277,14 @@ public class ControlFlowDistanceMetric implements DistanceMetric {
    * @param pARGStates the ARGStates
    * @return the new Generated Path (maybe more than one found)
    */
+  @SuppressWarnings("RedundantControlFlow") // FIXME
+  // https://gitlab.com/sosy-lab/software/cpachecker/-/commit/5f68fc9d6b5e69680a6b798b2d320106711197cd#note_2269388303
   private List<List<CFAEdge>> pathGenerator(List<CFAEdge> pBranchesCE, List<ARGState> pARGStates) {
     if (pBranchesCE.isEmpty()) {
       return null;
     }
     // Get the last branch of the counterexample - the one closer to the Error -
-    CFAEdge lastBranch = pBranchesCE.get(pBranchesCE.size() - 1);
+    CFAEdge lastBranch = pBranchesCE.getLast();
     for (CFAEdge pCFAEdge : pBranchesCE) {
       if (pCFAEdge.getPredecessor().getNumLeavingEdges() == 0) {
         continue;
