@@ -8,14 +8,13 @@
 
 package org.sosy_lab.cpachecker.core.algorithm.fault_localization.by_unsatisfiability.trace_formula.precondition;
 
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.logging.Level;
-import java.util.regex.Pattern;
 import org.sosy_lab.cpachecker.cfa.ast.c.CExpressionAssignmentStatement;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFunctionCallAssignmentStatement;
 import org.sosy_lab.cpachecker.cfa.ast.c.CInitializer;
@@ -49,16 +48,18 @@ public class VariableAssignmentPreConditionComposer implements PreConditionCompo
       FormulaContext pContext,
       TraceFormulaOptions pOptions,
       boolean pWithInitialAssignment,
-      boolean pWithDevlaredPreconditionVariables) {
+      boolean pWithDeclaredPreconditionVariables) {
     context = pContext;
     options = pOptions;
     includeInitialAssignment = pWithInitialAssignment;
-    includeDeclaredPreconditionVariables = pWithDevlaredPreconditionVariables;
+    includeDeclaredPreconditionVariables = pWithDeclaredPreconditionVariables;
   }
 
   @Override
   public PreCondition extractPreCondition(List<CFAEdge> pCounterexample)
-      throws SolverException, InterruptedException, CPATransferException,
+      throws SolverException,
+          InterruptedException,
+          CPATransferException,
           InvalidCounterexampleException {
     PreCondition nondets = createNondetPrecondition(pCounterexample);
     if (!includeInitialAssignment) {
@@ -103,16 +104,14 @@ public class VariableAssignmentPreConditionComposer implements PreConditionCompo
       // side
       if (cfaEdge.getEdgeType() == CFAEdgeType.StatementEdge) {
         CStatementEdge statementEdge = (CStatementEdge) cfaEdge;
-        if (statementEdge.getStatement() instanceof CFunctionCallAssignmentStatement) {
-          CFunctionCallAssignmentStatement statement =
-              (CFunctionCallAssignmentStatement) statementEdge.getStatement();
+        if (statementEdge.getStatement() instanceof CFunctionCallAssignmentStatement statement) {
+
           coveredVariables.add(statement.getLeftHandSide().toQualifiedASTString());
           remainingCounterexample.add(cfaEdge);
           continue;
         }
-        if (statementEdge.getStatement() instanceof CExpressionAssignmentStatement) {
-          CExpressionAssignmentStatement statement =
-              (CExpressionAssignmentStatement) statementEdge.getStatement();
+        if (statementEdge.getStatement() instanceof CExpressionAssignmentStatement statement) {
+
           String qualifiedName = statement.getLeftHandSide().toQualifiedASTString();
           if (coveredVariables.contains(qualifiedName)
               || !(statement.getRightHandSide() instanceof CLiteralExpression)) {
@@ -139,11 +138,13 @@ public class VariableAssignmentPreConditionComposer implements PreConditionCompo
   }
 
   private PreCondition createNondetPrecondition(List<CFAEdge> pCounterexample)
-      throws SolverException, InterruptedException, CPATransferException,
+      throws SolverException,
+          InterruptedException,
+          CPATransferException,
           InvalidCounterexampleException {
     BooleanFormulaManager bmgr = context.getSolver().getFormulaManager().getBooleanFormulaManager();
     BooleanFormula precond = bmgr.makeTrue();
-    Set<String> nondetVariables = new HashSet<>();
+    ImmutableSet.Builder<String> nondetVariables = ImmutableSet.builder();
     try (ProverEnvironment prover = context.getProver()) {
       prover.push(context.getManager().makeFormulaForPath(pCounterexample).getFormula());
       if (prover.isUnsat()) {
@@ -153,16 +154,10 @@ public class VariableAssignmentPreConditionComposer implements PreConditionCompo
       for (ValueAssignment modelAssignment : prover.getModelAssignments()) {
         context.getLogger().log(Level.FINEST, "tfprecondition=" + modelAssignment);
         BooleanFormula formula = modelAssignment.getAssignmentAsFormula();
-        if (!Pattern.matches(".+::.+@[0-9]+", modelAssignment.getKey().toString())) {
+        if (modelAssignment.getName().contains("nondet")) {
           precond = bmgr.and(precond, formula);
-          FluentIterable.from(
-                  context.getSolver().getFormulaManager().extractVariables(formula).keySet())
-              .filter(name -> name.contains("__VERIFIER_nondet_"))
-              .copyInto(nondetVariables);
-        } else if (modelAssignment
-            .getKey()
-            .toString()
-            .contains("__FAULT_LOCALIZATION_precondition")) {
+          nondetVariables.add(modelAssignment.getName());
+        } else if (modelAssignment.getName().startsWith("__FAULT_LOCALIZATION_precondition")) {
           precond = bmgr.and(precond, formula);
         }
       }
@@ -170,18 +165,16 @@ public class VariableAssignmentPreConditionComposer implements PreConditionCompo
           ImmutableList.of(),
           pCounterexample,
           context.getSolver().getFormulaManager().uninstantiate(precond),
-          nondetVariables);
+          nondetVariables.build());
     }
   }
 
   private boolean handleDeclarationEdge(CDeclarationEdge declarationEdge) {
     // only variable declarations can be part of preconditions
-    if (!(declarationEdge.getDeclaration() instanceof CVariableDeclaration)) {
+    if (!(declarationEdge.getDeclaration() instanceof CVariableDeclaration variableDeclaration)) {
       return false;
     }
 
-    CVariableDeclaration variableDeclaration =
-        (CVariableDeclaration) declarationEdge.getDeclaration();
     // variable must not be excluded when added to precondition
     if (options.getExcludeFromPrecondition().contains(variableDeclaration.getQualifiedName())) {
       return false;
@@ -194,30 +187,24 @@ public class VariableAssignmentPreConditionComposer implements PreConditionCompo
     }
 
     // arrays have to have literals only
-    if (initializer instanceof CInitializerList) {
-      CInitializerList listInitializer = (CInitializerList) initializer;
+    if (initializer instanceof CInitializerList listInitializer) {
       List<CInitializer> waitlist = new ArrayList<>(listInitializer.getInitializers());
       while (!waitlist.isEmpty()) {
-        CInitializer next = waitlist.remove(0);
-        if (next instanceof CInitializerList) {
-          waitlist.addAll(((CInitializerList) next).getInitializers());
+        CInitializer next = waitlist.removeFirst();
+        if (next instanceof CInitializerList cInitializerList) {
+          waitlist.addAll(cInitializerList.getInitializers());
           continue;
         }
-        if (next instanceof CInitializerExpression) {
-          CInitializerExpression expression = (CInitializerExpression) next;
-          if (!(expression.getExpression() instanceof CLiteralExpression)) {
-            return false;
-          }
+        if ((next instanceof CInitializerExpression expression)
+            && !(expression.getExpression() instanceof CLiteralExpression)) {
+          return false;
         }
       }
       return true;
     }
 
     // must only be initialized with literals
-    if (initializer instanceof CInitializerExpression) {
-      CInitializerExpression expression = (CInitializerExpression) initializer;
-      return expression.getExpression() instanceof CLiteralExpression;
-    }
-    return false;
+    return initializer instanceof CInitializerExpression expression
+        && expression.getExpression() instanceof CLiteralExpression;
   }
 }
