@@ -38,10 +38,12 @@ import org.sosy_lab.common.io.IO;
 import org.sosy_lab.common.io.PathTemplate;
 import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.cpachecker.cfa.CFA;
+import org.sosy_lab.cpachecker.cfa.Language;
 import org.sosy_lab.cpachecker.core.counterexample.CFAEdgeWithAssumptions;
 import org.sosy_lab.cpachecker.core.counterexample.CFAPathWithAssumptions;
 import org.sosy_lab.cpachecker.core.counterexample.CounterexampleInfo;
 import org.sosy_lab.cpachecker.core.interfaces.ConfigurableProgramAnalysis;
+import org.sosy_lab.cpachecker.core.specification.Specification;
 import org.sosy_lab.cpachecker.cpa.arg.ARGState;
 import org.sosy_lab.cpachecker.cpa.arg.ARGToDotWriter;
 import org.sosy_lab.cpachecker.cpa.arg.ARGUtils;
@@ -61,13 +63,14 @@ import org.sosy_lab.cpachecker.util.faultlocalization.FaultLocalizationInfo;
 import org.sosy_lab.cpachecker.util.faultlocalization.FaultLocalizationInfoExporter;
 import org.sosy_lab.cpachecker.util.harness.HarnessExporter;
 import org.sosy_lab.cpachecker.util.testcase.TestCaseExporter;
+import org.sosy_lab.cpachecker.util.yamlwitnessexport.CounterexampleToWitness;
 
 @Options(prefix = "counterexample.export", deprecatedPrefix = "cpa.arg.errorPath")
 public class CEXExporter {
 
   enum CounterexampleExportType {
     CBMC,
-    CONCRETE_EXECUTION;
+    CONCRETE_EXECUTION,
   }
 
   @Option(
@@ -101,10 +104,12 @@ public class CEXExporter {
       ImmutableList.of(PathEqualityCounterexampleFilter::new);
 
   private final CounterexampleFilter cexFilter;
+  private final CFA cfa;
 
   private final CEXExportOptions options;
   private final LogManager logger;
   private final WitnessExporter witnessExporter;
+  private final CounterexampleToWitness cexToWitness;
   private final ExtendedWitnessExporter extendedWitnessExporter;
   private final HarnessExporter harnessExporter;
   private final FaultLocalizationInfoExporter faultExporter;
@@ -114,7 +119,8 @@ public class CEXExporter {
       Configuration config,
       CEXExportOptions pOptions,
       LogManager pLogger,
-      CFA cfa,
+      Specification pSpecification,
+      CFA pCFA,
       ConfigurableProgramAnalysis cpa,
       WitnessExporter pWitnessExporter,
       ExtendedWitnessExporter pExtendedWitnessExporter)
@@ -124,18 +130,25 @@ public class CEXExporter {
     logger = pLogger;
     witnessExporter = checkNotNull(pWitnessExporter);
     extendedWitnessExporter = checkNotNull(pExtendedWitnessExporter);
+    cfa = pCFA;
 
     if (!options.disabledCompletely()) {
       cexFilter =
           CounterexampleFilter.createCounterexampleFilter(config, pLogger, cpa, cexFilterClasses);
-      harnessExporter = new HarnessExporter(config, pLogger, cfa);
-      testExporter = new TestCaseExporter(cfa, logger, config);
+      harnessExporter = new HarnessExporter(config, pLogger, pCFA);
+      testExporter = new TestCaseExporter(pCFA, logger, config);
       faultExporter = new FaultLocalizationInfoExporter(config);
+      if (options.getYamlWitnessPathTemplate() != null) {
+        cexToWitness = new CounterexampleToWitness(config, pCFA, pSpecification, pLogger);
+      } else {
+        cexToWitness = null;
+      }
     } else {
       cexFilter = null;
       harnessExporter = null;
       testExporter = null;
       faultExporter = null;
+      cexToWitness = null;
     }
   }
 
@@ -162,7 +175,7 @@ public class CEXExporter {
    * @param targetState state of an ARG, used as fallback, if pCounterexampleInfo contains no
    *     targetPath.
    * @param counterexample contains further information and the (optional) targetPath. If the
-   *     targetPath is available, it will be used for the output. Otherwise we use backwards
+   *     targetPath is available, it will be used for the output. Otherwise, we use backwards
    *     reachable states from pTargetState.
    */
   public void exportCounterexample(
@@ -174,14 +187,15 @@ public class CEXExporter {
       return;
     }
 
-    if (exportFaults && counterexample instanceof FaultLocalizationInfo && faultExporter != null) {
+    if (exportFaults
+        && counterexample instanceof FaultLocalizationInfo faultLocalizationInfo
+        && faultExporter != null) {
       try {
         CFAPathWithAssumptions errorPath = counterexample.getCFAPathWithAssignments();
         faultExporter.export(
-            ((FaultLocalizationInfo) counterexample).getRankedList(),
-            errorPath.get(errorPath.size() - 1).getCFAEdge());
-      } catch (IOException pE) {
-        logger.logUserException(Level.WARNING, pE, "Could not export faults as JSON.");
+            faultLocalizationInfo.getRankedList(), errorPath.getLast().getCFAEdge());
+      } catch (IOException e) {
+        logger.logUserException(Level.WARNING, e, "Could not export faults as JSON.");
       }
     }
 
@@ -235,18 +249,13 @@ public class CEXExporter {
       pathElements = targetPath.getStateSet();
 
       if (options.getSourceFile() != null) {
-        switch (codeStyle) {
-          case CONCRETE_EXECUTION:
-            pathProgram =
-                PathToConcreteProgramTranslator.translateSinglePath(
-                    targetPath, counterexample.getCFAPathWithAssignments());
-            break;
-          case CBMC:
-            pathProgram = PathToCTranslator.translateSinglePath(targetPath);
-            break;
-          default:
-            throw new AssertionError("Unhandled case statement: " + codeStyle);
-        }
+        pathProgram =
+            switch (codeStyle) {
+              case CONCRETE_EXECUTION ->
+                  PathToConcreteProgramTranslator.translateSinglePath(
+                      targetPath, counterexample.getCFAPathWithAssignments());
+              case CBMC -> PathToCTranslator.translateSinglePath(targetPath);
+            };
       }
 
     } else {
@@ -258,21 +267,18 @@ public class CEXExporter {
 
       if (options.getSourceFile() != null) {
         switch (codeStyle) {
-          case CONCRETE_EXECUTION:
-            logger.log(
-                Level.WARNING,
-                "Cannot export imprecise counterexample to C code for concrete execution.");
-            break;
-          case CBMC:
+          case CONCRETE_EXECUTION ->
+              logger.log(
+                  Level.WARNING,
+                  "Cannot export imprecise counterexample to C code for concrete execution.");
+          case CBMC -> {
             // "translatePaths" does not work if the ARG branches without assume edge
             if (ARGUtils.hasAmbiguousBranching(rootState, pathElements)) {
               pathProgram = PathToCTranslator.translateSinglePath(targetPath);
             } else {
               pathProgram = PathToCTranslator.translatePaths(rootState, pathElements);
             }
-            break;
-          default:
-            throw new AssertionError("Unhandled case statement: " + codeStyle);
+          }
         }
       }
     }
@@ -307,30 +313,43 @@ public class CEXExporter {
       }
     }
 
-    try {
-      final Witness witness =
-          witnessExporter.generateErrorWitness(
-              rootState, Predicates.in(pathElements), isTargetPathEdge, counterexample);
+    if (options.getWitnessFile() != null
+        || options.getWitnessDotFile() != null
+        || options.getYamlWitnessPathTemplate() != null) {
+      try {
+        final Witness witness =
+            witnessExporter.generateErrorWitness(
+                rootState, Predicates.in(pathElements), isTargetPathEdge, counterexample);
 
-      writeErrorPathFile(
-          options.getWitnessFile(),
-          uniqueId,
-          (Appender)
-              pApp -> {
-                WitnessToOutputFormatsUtils.writeToGraphMl(witness, pApp);
-              },
-          compressWitness);
+        writeErrorPathFile(
+            options.getWitnessFile(),
+            uniqueId,
+            (Appender) pApp -> WitnessToOutputFormatsUtils.writeToGraphMl(witness, pApp),
+            compressWitness);
 
-      writeErrorPathFile(
-          options.getWitnessDotFile(),
-          uniqueId,
-          (Appender)
-              pApp -> {
-                WitnessToOutputFormatsUtils.writeToDot(witness, pApp);
-              },
-          compressWitness);
-    } catch (InterruptedException e) {
-      logger.logUserException(Level.WARNING, e, "Could not export witness due to interruption");
+        writeErrorPathFile(
+            options.getWitnessDotFile(),
+            uniqueId,
+            (Appender) pApp -> WitnessToOutputFormatsUtils.writeToDot(witness, pApp),
+            compressWitness);
+        if (cfa.getMetadata().getInputLanguage() == Language.C) {
+          if (options.getYamlWitnessPathTemplate() != null && cexToWitness != null) {
+            try {
+              cexToWitness.export(counterexample, options.getYamlWitnessPathTemplate(), uniqueId);
+            } catch (IOException e) {
+              logger.logUserException(
+                  Level.WARNING, e, "Could not generate YAML violation witness.");
+            }
+          }
+        } else {
+          logger.log(
+              Level.WARNING,
+              "Cannot export violation witness to YAML format for languages other than C.");
+        }
+
+      } catch (InterruptedException e) {
+        logger.logUserException(Level.WARNING, e, "Could not export witness due to interruption");
+      }
     }
 
     if (options.getExtendedWitnessFile() != null) {
@@ -342,26 +361,20 @@ public class CEXExporter {
             options.getExtendedWitnessFile(),
             uniqueId,
             (Appender)
-                pAppendable -> {
-                  WitnessToOutputFormatsUtils.writeToGraphMl(extWitness, pAppendable);
-                },
+                pAppendable -> WitnessToOutputFormatsUtils.writeToGraphMl(extWitness, pAppendable),
             compressWitness);
       } catch (InterruptedException e) {
         logger.logUserException(Level.WARNING, e, "Could not export witness due to interruption");
       }
     }
 
-    writeErrorPathFile(
-        options.getTestHarnessFile(),
-        uniqueId,
-        (Appender)
-            pAppendable ->
-                harnessExporter.writeHarness(
-                    pAppendable,
-                    rootState,
-                    Predicates.in(pathElements),
-                    isTargetPathEdge,
-                    counterexample));
+    if (options.getTestHarnessFile() != null) {
+      Optional<String> harness =
+          harnessExporter.writeHarness(
+              rootState, Predicates.in(pathElements), isTargetPathEdge, counterexample);
+      harness.ifPresent(
+          content -> writeErrorPathFile(options.getTestHarnessFile(), uniqueId, content));
+    }
 
     if (options.exportToTest() && testExporter != null) {
       testExporter.writeTestCaseFiles(counterexample, Optional.empty());
