@@ -13,10 +13,12 @@ import static org.sosy_lab.cpachecker.util.CFAUtils.allLeavingEdges;
 import static org.sosy_lab.cpachecker.util.CFAUtils.enteringEdges;
 import static org.sosy_lab.cpachecker.util.CFAUtils.leavingEdges;
 
+import com.google.common.base.Ascii;
 import com.google.common.base.Splitter;
 import java.io.IOException;
 import java.io.InvalidObjectException;
 import java.io.ObjectInputStream;
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
 import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
@@ -32,12 +34,12 @@ import org.sosy_lab.cpachecker.core.interfaces.Partitionable;
 import org.sosy_lab.cpachecker.exceptions.InvalidQueryException;
 import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.globalinfo.CFAInfo;
-import org.sosy_lab.cpachecker.util.globalinfo.GlobalInfo;
+import org.sosy_lab.cpachecker.util.globalinfo.SerializationInfoStorage;
 
 public class LocationState
     implements AbstractStateWithLocation, AbstractQueryableState, Partitionable, Serializable {
 
-  private static final long serialVersionUID = -801176497691618779L;
+  @Serial private static final long serialVersionUID = -801176497691618779L;
 
   private static boolean isNoFunctionCall(CFAEdge e) {
     return !(e instanceof FunctionCallEdge || e instanceof FunctionReturnEdge);
@@ -45,7 +47,7 @@ public class LocationState
 
   static class BackwardsLocationState extends LocationState {
 
-    private static final long serialVersionUID = 6825257572921009531L;
+    @Serial private static final long serialVersionUID = 6825257572921009531L;
 
     BackwardsLocationState(CFANode locationNode, boolean pFollowFunctionCalls) {
       super(locationNode, pFollowFunctionCalls);
@@ -53,11 +55,11 @@ public class LocationState
 
     @Override
     public Iterable<CFAEdge> getOutgoingEdges() {
-      return super.getIngoingEdges();
+      return super.getIncomingEdges();
     }
 
     @Override
-    public Iterable<CFAEdge> getIngoingEdges() {
+    public Iterable<CFAEdge> getIncomingEdges() {
       return super.getOutgoingEdges();
     }
   }
@@ -86,7 +88,7 @@ public class LocationState
   }
 
   @Override
-  public Iterable<CFAEdge> getIngoingEdges() {
+  public Iterable<CFAEdge> getIncomingEdges() {
     if (followFunctionCalls) {
       return enteringEdges(locationNode);
 
@@ -110,8 +112,8 @@ public class LocationState
               + pProperty
               + "\" is invalid. Could not split the property string correctly.");
     } else {
-      switch (parts.get(0).toLowerCase()) {
-        case "line":
+      switch (Ascii.toLowerCase(parts.getFirst())) {
+        case "line" -> {
           try {
             int queryLine = Integer.parseInt(parts.get(1));
             for (CFAEdge edge : CFAUtils.enteringEdges(locationNode)) {
@@ -128,13 +130,16 @@ public class LocationState
                     + parts.get(1)
                     + "\"");
           }
-        case "functionname":
+        }
+        case "functionname" -> {
           return locationNode.getFunctionName().equals(parts.get(1));
-        case "label":
-          return locationNode instanceof CFALabelNode
-              ? ((CFALabelNode) locationNode).getLabel().equals(parts.get(1))
+        }
+        case "label" -> {
+          return locationNode instanceof CFALabelNode labelNode
+              ? labelNode.getLabel().equals(parts.get(1))
               : false;
-        case "nodenumber":
+        }
+        case "nodenumber" -> {
           try {
             int queryNumber = Integer.parseInt(parts.get(1));
             return locationNode.getNodeNumber() == queryNumber;
@@ -146,7 +151,8 @@ public class LocationState
                     + parts.get(1)
                     + "\"");
           }
-        case "mainentry":
+        }
+        case "mainentry" -> {
           if (locationNode.getNumEnteringEdges() == 1
               && locationNode.getFunctionName().equals(parts.get(1))) {
             CFAEdge enteringEdge = locationNode.getEnteringEdge(0);
@@ -157,13 +163,14 @@ public class LocationState
             }
           }
           return false;
-        default:
-          throw new InvalidQueryException(
-              "The Query \""
-                  + pProperty
-                  + "\" is invalid. \""
-                  + parts.get(0)
-                  + "\" is no valid keyword");
+        }
+        default ->
+            throw new InvalidQueryException(
+                "The Query \""
+                    + pProperty
+                    + "\" is invalid. \""
+                    + parts.getFirst()
+                    + "\" is no valid keyword");
       }
     }
   }
@@ -192,6 +199,7 @@ public class LocationState
 
   // no equals and hashCode because there is always only one element per CFANode
 
+  @Serial
   private Object writeReplace() {
     return new SerialProxy(locationNode.getNodeNumber());
   }
@@ -202,20 +210,22 @@ public class LocationState
    * @param in the input stream
    */
   @SuppressWarnings("UnusedVariable") // parameter is required by API
+  @Serial
   private void readObject(ObjectInputStream in) throws IOException {
     throw new InvalidObjectException("Proxy required");
   }
 
   private static class SerialProxy implements Serializable {
-    private static final long serialVersionUID = 6889568471468710163L;
+    @Serial private static final long serialVersionUID = 6889568471468710163L;
     private final int nodeNumber;
 
-    public SerialProxy(int nodeNumber) {
+    SerialProxy(int nodeNumber) {
       this.nodeNumber = nodeNumber;
     }
 
+    @Serial
     private Object readResolve() {
-      CFAInfo cfaInfo = GlobalInfo.getInstance().getCFAInfo().orElseThrow();
+      CFAInfo cfaInfo = SerializationInfoStorage.getInstance().getCFAInfo().orElseThrow();
       return cfaInfo.getLocationStateFactory().getState(cfaInfo.getNodeByNodeNumber(nodeNumber));
     }
   }
