@@ -20,6 +20,7 @@ import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
 import com.google.common.collect.Streams;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -283,7 +284,7 @@ public class PolicyIterationManager {
       throws CPAException, InterruptedException {
     return precisionAdjustment0(inputState, inputPrecision, states, pArgState)
         .flatMap(
-            s -> Optional.of(PrecisionAdjustmentResult.create(s, inputPrecision, Action.CONTINUE)));
+            s -> Optional.of(new PrecisionAdjustmentResult(s, inputPrecision, Action.CONTINUE)));
   }
 
   /** Perform abstraction and reachability checking with precision adjustment operator. */
@@ -431,7 +432,7 @@ public class PolicyIterationManager {
       locationID = sibling.orElseThrow().getLocationID();
     } else {
       locationID = getFreshLocationID();
-      logger.log(Level.INFO, "Generating new location ID", locationID, " for node ", node);
+      logger.log(Level.FINEST, "Generating new location ID", locationID, "for node", node);
     }
     return locationID;
   }
@@ -610,11 +611,10 @@ public class PolicyIterationManager {
       Map<Template, PolicyBound> updated,
       ValueDeterminationConstraints valDetConstraints)
       throws InterruptedException, CPATransferException {
-    logger.log(
-        Level.INFO,
-        "Value determination at node",
+    logger.logf(
+        Level.FINER,
+        "Value determination at node %s, #constraints = %d",
         stateWithUpdates.getNode(),
-        ", #constraints = ",
         valDetConstraints.constraints.size());
     Map<Template, PolicyBound> newAbstraction = new HashMap<>(stateWithUpdates.getAbstraction());
     int locId = stateWithUpdates.getLocationID();
@@ -653,8 +653,8 @@ public class PolicyIterationManager {
           return Optional.empty();
         } else if (result == OptStatus.UNDEF) {
           shutdownNotifier.shutdownIfNecessary();
-          logger.log(Level.WARNING, "Solver returned undefined status on the problem: ");
-          logger.log(Level.INFO, optEnvironment);
+          logger.log(
+              Level.ALL, "Solver returned undefined status on the problem:\n", optEnvironment);
           throw new CPATransferException("Unexpected solver state");
         }
         assert result == OptStatus.OPT;
@@ -664,7 +664,7 @@ public class PolicyIterationManager {
         if (value.isPresent()
             && !templateToFormulaConversionManager.isOverflowing(template, value.orElseThrow())) {
           Rational v = value.orElseThrow();
-          logger.log(Level.FINE, "Updating", template, "to value", v);
+          logger.log(Level.FINEST, "Updating", template, "to value", v);
           newAbstraction.put(template, mergedBound.updateValueFromValueDetermination(v));
         } else {
 
@@ -764,16 +764,12 @@ public class PolicyIterationManager {
   }
 
   private Set<BooleanFormula> toLemmas(BooleanFormula formula) throws InterruptedException {
-    switch (toLemmasAlgorithm) {
-      case "CNF":
-        return bfmgr.toConjunctionArgs(fmgr.applyTactic(formula, Tactic.TSEITIN_CNF), true);
-      case "RCNF":
-        return rcnfManager.toLemmas(formula, fmgr);
-      case "NONE":
-        return ImmutableSet.of(formula);
-      default:
-        throw new UnsupportedOperationException("Unexpected state");
-    }
+    return switch (toLemmasAlgorithm) {
+      case "CNF" -> bfmgr.toConjunctionArgs(fmgr.applyTactic(formula, Tactic.TSEITIN_CNF), true);
+      case "RCNF" -> rcnfManager.toLemmas(formula, fmgr);
+      case "NONE" -> ImmutableSet.of(formula);
+      default -> throw new UnsupportedOperationException("Unexpected state");
+    };
   }
 
   private final Map<Formula, Set<String>> functionNamesCache = new HashMap<>();
@@ -793,6 +789,9 @@ public class PolicyIterationManager {
    * @param generatorState State to abstract
    * @return Abstracted state if the state is reachable, empty optional otherwise.
    */
+  @SuppressFBWarnings(
+      value = "SF_SWITCH_NO_DEFAULT",
+      justification = "false alarm, maybe https://github.com/spotbugs/spotbugs/issues/3617")
   private PolicyAbstractedState performAbstraction(
       final PolicyIntermediateState generatorState,
       int locationID,
@@ -832,8 +831,7 @@ public class PolicyIterationManager {
           Pair<DecompositionStatus, PolicyBound> res =
               computeByDecomposition(template, p, lemmas, startConstraintLemmas, abstraction);
           switch (res.getFirstNotNull()) {
-            case BOUND_COMPUTED:
-
+            case BOUND_COMPUTED -> {
               // Put the computed bound.
               PolicyBound bound = res.getSecondNotNull();
               if (checkPolicyInitialCondition) {
@@ -841,17 +839,15 @@ public class PolicyIterationManager {
               }
               abstraction.put(template, bound);
               continue;
-            case UNBOUNDED:
-
+            }
+            case UNBOUNDED -> {
               // Any of the components is unbounded => the sum is unbounded as
               // well.
               continue;
-            case ABSTRACTION_REQUIRED:
-
+            }
+            case ABSTRACTION_REQUIRED -> {
               // Continue with abstraction.
-              break;
-            default:
-              throw new UnsupportedOperationException("Unexpected case");
+            }
           }
         }
 
@@ -891,7 +887,7 @@ public class PolicyIterationManager {
         }
 
         switch (status) {
-          case OPT:
+          case OPT -> {
             Optional<Rational> bound = optEnvironment.upper(handle, EPSILON);
             Optional<PolicyBound> policyBound =
                 getPolicyBound(
@@ -908,17 +904,13 @@ public class PolicyIterationManager {
             }
 
             logger.log(Level.FINE, "Got bound: ", bound);
-            break;
-
-          case UNSAT:
-            throw new CPAException("Unexpected UNSAT");
-
-          case UNDEF:
+          }
+          case UNSAT -> throw new CPAException("Unexpected UNSAT");
+          case UNDEF -> {
             logger.log(Level.WARNING, "Solver returned undefined status on the problem: ");
             logger.log(Level.INFO, optEnvironment.toString());
             throw new CPATransferException("Solver returned undefined status");
-          default:
-            throw new AssertionError("Unhandled enum value in switch: " + status);
+          }
         }
       }
     } catch (SolverException e) {
@@ -979,7 +971,7 @@ public class PolicyIterationManager {
       return Pair.of(ABSTRACTION_REQUIRED, null);
     }
 
-    // Slices and bounds for all template sub-components.
+    // Slices and bounds for all template subcomponents.
     List<Set<BooleanFormula>> slices = new ArrayList<>(pTemplate.size());
     List<PolicyBound> policyBounds = new ArrayList<>();
     List<Rational> coefficients = new ArrayList<>();
@@ -1027,7 +1019,7 @@ public class PolicyIterationManager {
 
     // Abstraction required if not all predecessors, SSA forms,
     // and pointer target sets are the same.
-    PolicyBound firstBound = policyBounds.get(0);
+    PolicyBound firstBound = policyBounds.getFirst();
     for (PolicyBound bound : policyBounds) {
       if (!bound.getPredecessor().equals(firstBound.getPredecessor())
           || !bound.getFormula().getSsa().equals(firstBound.getFormula().getSsa())
@@ -1181,20 +1173,18 @@ public class PolicyIterationManager {
       return true;
     }
 
-    switch (abstractionLocations) {
-      case ALL:
-        return true;
-      case LOOPHEAD:
+    return switch (abstractionLocations) {
+      case ALL -> true;
+
+      case LOOPHEAD -> {
         LoopBoundState loopState =
             AbstractStates.extractStateByType(totalState, LoopBoundState.class);
 
-        return (cfa.getAllLoopHeads().orElseThrow().contains(node)
+        yield (cfa.getAllLoopHeads().orElseThrow().contains(node)
             && (loopState == null || loopState.isLoopCounterAbstracted()));
-      case MERGE:
-        return node.getNumEnteringEdges() > 1;
-      default:
-        throw new UnsupportedOperationException("Unexpected state");
-    }
+      }
+      case MERGE -> node.getNumEnteringEdges() > 1;
+    };
   }
 
   /**
@@ -1291,8 +1281,9 @@ public class PolicyIterationManager {
   private BooleanFormula extractFormula(AbstractState pFormulaState) {
     List<BooleanFormula> constraints = new ArrayList<>();
     for (AbstractState a : asIterable(pFormulaState)) {
-      if (!(a instanceof PolicyAbstractedState) && a instanceof FormulaReportingState) {
-        constraints.add(((FormulaReportingState) a).getFormulaApproximation(fmgr));
+      if (!(a instanceof PolicyAbstractedState)
+          && a instanceof FormulaReportingState formulaReportingState) {
+        constraints.add(formulaReportingState.getFormulaApproximation(fmgr));
       }
     }
     return bfmgr.and(constraints);
