@@ -16,14 +16,15 @@ import com.google.common.collect.ImmutableList;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.junit.Before;
 import org.junit.Test;
+import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
 import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.common.log.LogManagerWithoutDuplicates;
-import org.sosy_lab.cpachecker.cfa.DummyCFAEdge;
 import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
 import org.sosy_lab.cpachecker.cfa.ast.c.CArraySubscriptExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpression;
@@ -38,6 +39,9 @@ import org.sosy_lab.cpachecker.cfa.ast.c.CPointerExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CSimpleDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.c.CUnaryExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CVariableDeclaration;
+import org.sosy_lab.cpachecker.cfa.model.BlankEdge;
+import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
+import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.types.MachineModel;
 import org.sosy_lab.cpachecker.cfa.types.c.CArrayType;
 import org.sosy_lab.cpachecker.cfa.types.c.CComplexType.ComplexTypeKind;
@@ -50,7 +54,11 @@ import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CStorageClass;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
-import org.sosy_lab.cpachecker.cpa.smg2.util.SMG2Exception;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
+import org.sosy_lab.cpachecker.core.AnalysisDirection;
+import org.sosy_lab.cpachecker.cpa.constraints.ConstraintsStatistics;
+import org.sosy_lab.cpachecker.cpa.constraints.domain.ConstraintsSolver;
+import org.sosy_lab.cpachecker.cpa.smg2.util.SMGException;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGStateAndOptionalSMGObjectAndOffset;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGValueAndSMGState;
 import org.sosy_lab.cpachecker.cpa.smg2.util.value.SMGCPAExpressionEvaluator;
@@ -62,7 +70,14 @@ import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
 import org.sosy_lab.cpachecker.cpa.value.type.Value;
 import org.sosy_lab.cpachecker.cpa.value.type.Value.UnknownValue;
 import org.sosy_lab.cpachecker.exceptions.CPATransferException;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula.CtoFormulaConverter;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.CToFormulaConverterWithPointerAliasing;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.FormulaEncodingWithPointerAliasingOptions;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.TypeHandlerWithPointerAliasing;
+import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
+import org.sosy_lab.cpachecker.util.predicates.smt.Solver;
 import org.sosy_lab.cpachecker.util.smg.graph.SMGObject;
+import org.sosy_lab.cpachecker.util.smg.graph.SMGTargetSpecifier;
 import org.sosy_lab.cpachecker.util.smg.graph.SMGValue;
 
 // TODO: run with more machine models
@@ -95,13 +110,13 @@ public class SMGCPAValueVisitorTest {
     INT_TYPE,
     UNSIGNED_INT_TYPE,
     LONG_TYPE,
-    UNSIGNED_LONG_TYPE
+    UNSIGNED_LONG_TYPE,
   };
 
   private static final MachineModel MACHINE_MODEL = MachineModel.LINUX64;
   // Pointer size for the machine model in bits
   private static final int POINTER_SIZE_IN_BITS =
-      MACHINE_MODEL.getSizeof(MACHINE_MODEL.getPointerEquivalentSimpleType()) * 8;
+      MACHINE_MODEL.getSizeof(MACHINE_MODEL.getPointerSizedIntType()) * 8;
 
   // Note: padding is on per default, meaning that the types get padding to allign to their
   // "natural" memory offset. I.e. starting with a 2 byte type, then using a 4 byte type would
@@ -137,25 +152,70 @@ public class SMGCPAValueVisitorTest {
   // The visitor should always use the currentState!
   private SMGCPAValueVisitor visitor;
 
+  private SMGOptions options;
+
+  private CFAEdge dummyCFAEdge =
+      new BlankEdge(
+          "dummy edge",
+          FileLocation.DUMMY,
+          CFANode.newDummyCFANode(),
+          CFANode.newDummyCFANode(),
+          "dummy for tests");
+
   @Before
   public void init() throws InvalidConfigurationException {
     logger = new LogManagerWithoutDuplicates(LogManager.createTestLogManager());
+    Configuration defaultOptionsNoPreciseRead =
+        Configuration.builder()
+            .copyFrom(Configuration.defaultConfiguration())
+            .setOption("cpa.smg2.preciseSMGRead", "false")
+            .build();
+    options = new SMGOptions(defaultOptionsNoPreciseRead);
 
     // null, null is fine as long as builtin functions are not used!
-    evaluator = new SMGCPAExpressionEvaluator(MACHINE_MODEL, logger, null, null);
+    evaluator =
+        new SMGCPAExpressionEvaluator(MACHINE_MODEL, logger, null, options, makeTestSolver());
 
-    currentState =
-        SMGState.of(MACHINE_MODEL, logger, new SMGOptions(Configuration.defaultConfiguration()));
+    currentState = SMGState.of(MACHINE_MODEL, logger, options, evaluator, new SMGCPAStatistics());
 
-    visitor = new SMGCPAValueVisitor(evaluator, currentState, new DummyCFAEdge(null, null), logger);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger, options);
+  }
+
+  private ConstraintsSolver makeTestSolver() throws InvalidConfigurationException {
+    Configuration config = Configuration.defaultConfiguration();
+    Solver smtSolver = Solver.create(config, logger, ShutdownNotifier.createDummy());
+    FormulaManagerView formulaManager = smtSolver.getFormulaManager();
+    FormulaEncodingWithPointerAliasingOptions formulaOptions =
+        new FormulaEncodingWithPointerAliasingOptions(config);
+    TypeHandlerWithPointerAliasing typeHandler =
+        new TypeHandlerWithPointerAliasing(logger, MACHINE_MODEL, formulaOptions);
+
+    CtoFormulaConverter converter =
+        new CToFormulaConverterWithPointerAliasing(
+            formulaOptions,
+            formulaManager,
+            MACHINE_MODEL,
+            Optional.empty(),
+            logger,
+            ShutdownNotifier.createDummy(),
+            typeHandler,
+            AnalysisDirection.FORWARD);
+
+    return new ConstraintsSolver(
+        config, MACHINE_MODEL, smtSolver, formulaManager, converter, new ConstraintsStatistics());
   }
 
   // Resets state and visitor to an empty state
   public void resetSMGStateAndVisitor() throws InvalidConfigurationException {
     currentState =
-        SMGState.of(MACHINE_MODEL, logger, new SMGOptions(Configuration.defaultConfiguration()));
+        SMGState.of(
+            MACHINE_MODEL,
+            logger,
+            new SMGOptions(Configuration.defaultConfiguration()),
+            evaluator,
+            new SMGCPAStatistics());
 
-    visitor = new SMGCPAValueVisitor(evaluator, currentState, new DummyCFAEdge(null, null), logger);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger, options);
   }
 
   /*
@@ -173,7 +233,7 @@ public class SMGCPAValueVisitorTest {
               true,
               ComplexTypeKind.STRUCT);
 
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(i);
       Value addressValue = new ConstantSymbolicExpression(new UnknownValue(), null);
 
@@ -193,11 +253,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should be the value we entered into the field,
       // which is a NumericValue = testNumericValue
       assertThat(resultValue).isInstanceOf(NumericValue.class);
-      assertThat(resultValue.asNumericValue().bigInteger()).isEqualTo(BigInteger.valueOf(i));
+      assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
 
       resetSMGStateAndVisitor();
     }
@@ -206,7 +266,7 @@ public class SMGCPAValueVisitorTest {
   /*
    * This tests the struct field read (*struct).field with pointers as values.
    * We test pointers of all types. We also fill the struct first completely and don't reset.
-   * The result should always be a AddressExpression with the correct address value and no offset.
+   * The result should always be an AddressExpression with the correct address value and no offset.
    */
   @Test
   public void readStructDerefWithPointerValuesTest()
@@ -240,21 +300,21 @@ public class SMGCPAValueVisitorTest {
                 COMPOSITE_VARIABLE_NAME,
                 i,
                 transformedImmutableListCopy(
-                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(false, false, n)));
+                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(CTypeQualifiers.NONE, n)));
 
         List<ValueAndSMGState> resultList = fieldRef.accept(visitor);
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
 
-        // The return should always be a AddressExpression with the address as memory address
+        // The return should always be an AddressExpression with the address as memory address
         assertThat(resultValue).isInstanceOf(AddressExpression.class);
         assertThat(((AddressExpression) resultValue).getMemoryAddress())
             .isEqualTo(addresses.get(i));
         // Offset is always 0 as there is no binary expr around them
         assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigInteger())
+        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
       }
     }
@@ -264,7 +324,7 @@ public class SMGCPAValueVisitorTest {
    * This tests the struct field read struct->field with pointers as values.
    * Struct is a pointer variable, pointing to the struct on the heap.
    * We test pointers of all types. We also fill the struct first completely and don't reset.
-   * The result should always be a AddressExpression with the correct address value and no offset.
+   * The result should always be an AddressExpression with the correct address value and no offset.
    */
   @Test
   public void readFieldDerefWithPointerValuesTest()
@@ -298,7 +358,7 @@ public class SMGCPAValueVisitorTest {
                 COMPOSITE_VARIABLE_NAME,
                 i,
                 transformedImmutableListCopy(
-                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(false, false, n)),
+                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(CTypeQualifiers.NONE, n)),
                 true,
                 ComplexTypeKind.STRUCT);
 
@@ -306,15 +366,15 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
 
-        // The return should always be a AddressExpression with the address as memory address
+        // The return should always be an AddressExpression with the address as memory address
         assertThat(resultValue).isInstanceOf(AddressExpression.class);
         assertThat(((AddressExpression) resultValue).getMemoryAddress())
             .isEqualTo(addresses.get(i));
         // Offset is always 0 as there is no binary expr around them
         assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigInteger())
+        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
       }
     }
@@ -323,7 +383,7 @@ public class SMGCPAValueVisitorTest {
   /*
    * This tests the struct field read struct.field with pointers as values.
    * The struct is on the stack. We test pointers of all types. We also fill the struct first completely and don't reset.
-   * The result should always be a AddressExpression with the correct address value and no offset.
+   * The result should always be an AddressExpression with the correct address value and no offset.
    */
   @Test
   public void readFieldFromStackWithPointerValuesTest() throws CPATransferException {
@@ -352,7 +412,7 @@ public class SMGCPAValueVisitorTest {
                 COMPOSITE_VARIABLE_NAME,
                 i,
                 transformedImmutableListCopy(
-                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(false, false, n)),
+                    STRUCT_UNION_TEST_TYPES, n -> new CPointerType(CTypeQualifiers.NONE, n)),
                 false,
                 ComplexTypeKind.STRUCT);
 
@@ -360,15 +420,15 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
 
-        // The return should always be a AddressExpression with the address as memory address
+        // The return should always be an AddressExpression with the address as memory address
         assertThat(resultValue).isInstanceOf(AddressExpression.class);
         assertThat(((AddressExpression) resultValue).getMemoryAddress())
             .isEqualTo(addresses.get(i));
         // Offset is always 0 as there is no binary expr around them
         assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigInteger())
+        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
             .isEqualTo(BigInteger.ZERO);
       }
     }
@@ -401,7 +461,7 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should be the value we entered into the field,
         // which is a NumericValue = testNumericValue
         assertThat(resultValue).isInstanceOf(NumericValue.class);
@@ -415,7 +475,7 @@ public class SMGCPAValueVisitorTest {
   public void readFieldDerefPointerExplicitlyTest()
       throws InvalidConfigurationException, CPATransferException {
     for (int i = 0; i < STRUCT_UNION_TEST_TYPES.size(); i++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(i);
       Value addressValue = new ConstantSymbolicExpression(new UnknownValue(), null);
 
@@ -439,11 +499,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should be the value we entered into the field,
       // which is a NumericValue = testNumericValue
       assertThat(resultValue).isInstanceOf(NumericValue.class);
-      assertThat(resultValue.asNumericValue().bigInteger()).isEqualTo(BigInteger.valueOf(i));
+      assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
 
       resetSMGStateAndVisitor();
     }
@@ -465,7 +525,7 @@ public class SMGCPAValueVisitorTest {
         COMPOSITE_VARIABLE_NAME, 0, POINTER_SIZE_IN_BITS, addressValue);
 
     for (int i = 0; i < STRUCT_UNION_TEST_TYPES.size(); i++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(i);
 
       writeToHeapObjectByAddress(
@@ -485,11 +545,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should be the value we entered into the field,
         // which is a NumericValue = testNumericValue
         assertThat(resultValue).isInstanceOf(NumericValue.class);
-        assertThat(resultValue.asNumericValue().bigInteger()).isEqualTo(BigInteger.valueOf(i));
+        assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
       }
     }
   }
@@ -511,7 +571,7 @@ public class SMGCPAValueVisitorTest {
               false,
               ComplexTypeKind.STRUCT);
 
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(i);
 
       // Now create the SMGState, SPC and SMG with the struct already present and values written to
@@ -529,11 +589,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should be the value we entered into the field,
       // which is a NumericValue = testNumericValue
       assertThat(resultValue).isInstanceOf(NumericValue.class);
-      assertThat(resultValue.asNumericValue().bigInteger()).isEqualTo(BigInteger.valueOf(i));
+      assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
 
       resetSMGStateAndVisitor();
     }
@@ -564,11 +624,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should be the value we entered into the field,
         // which is a NumericValue = testNumericValue
         assertThat(resultValue).isInstanceOf(NumericValue.class);
-        assertThat(resultValue.asNumericValue().bigInteger()).isEqualTo(BigInteger.valueOf(i));
+        assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.valueOf(i));
       }
     }
   }
@@ -586,7 +646,7 @@ public class SMGCPAValueVisitorTest {
    * Now read int, we read:
    * 0000 0001 0000 0000
    * which is 256 as an int
-   * Currently we read by type exactly and this means that we can only read types
+   * Currently, we read by type exactly and this means that we can only read types
    * with the exact size of the value last written. 0 always works!
    */
   @Test
@@ -618,10 +678,10 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // Check that 0 always holds
         assertThat(resultValue).isInstanceOf(NumericValue.class);
-        assertThat(resultValue.asNumericValue().bigInteger()).isEqualTo(BigInteger.ZERO);
+        assertThat(resultValue.asNumericValue().bigIntegerValue()).isEqualTo(BigInteger.ZERO);
       }
     }
   }
@@ -638,7 +698,7 @@ public class SMGCPAValueVisitorTest {
         COMPOSITE_VARIABLE_NAME, getLargestSizeInBitsForListOfCType(STRUCT_UNION_TEST_TYPES));
 
     for (int k = 0; k < STRUCT_UNION_TEST_TYPES.size(); k++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(k + 1);
 
       // Write to the stack union; Note: this is always offset 0!
@@ -665,7 +725,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct returns
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           // Check that types with the size of the current have the correct value, and all other
           // should be unknown
           if (MACHINE_MODEL
@@ -673,7 +733,7 @@ public class SMGCPAValueVisitorTest {
                   .compareTo(MACHINE_MODEL.getSizeof(STRUCT_UNION_TEST_TYPES.get(i)))
               == 0) {
             assertThat(resultValue).isInstanceOf(NumericValue.class);
-            assertThat(resultValue.asNumericValue().bigInteger())
+            assertThat(resultValue.asNumericValue().bigIntegerValue())
                 .isEqualTo(BigInteger.valueOf(k + 1));
           } else {
             // Unknowns are tranlated into ConstantSymbolicExpression
@@ -712,7 +772,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -759,7 +819,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -795,7 +855,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -837,7 +897,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -869,7 +929,7 @@ public class SMGCPAValueVisitorTest {
 
       // Now write some distinct values into the array, for signed we want to test negatives!
       for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+        // Create a Value that we want to be mapped to an SMGValue to write into the array depending
         // on the type
         Value arrayValue = transformInputIntoValue(currentValueArrayType, k);
 
@@ -892,10 +952,11 @@ public class SMGCPAValueVisitorTest {
       // Note: we should reuse the pointer for index 0 from above, but I am lazy and it does not
       // matter in a test
       SMGObject objectForAddressValue =
-          currentState.dereferencePointer(addressValueArray).get(0).getSMGObject();
+          currentState.dereferencePointer(addressValueArray).getFirst().getSMGObject();
       for (int j = 0; j < TEST_ARRAY_LENGTH; j++) {
-        // We need a mapping from each value representing a address to a SMGValue that is mapped to
-        // a SMGPointsToEdge (modeling the pointer). We simply use numeric values for this. We
+        // We need a mapping from each value representing an address to an SMGValue that is mapped
+        // to
+        // an SMGPointsToEdge (modeling the pointer). We simply use numeric values for this. We
         // remember the pointer values such that the index is the same as the location of the
         // pointer in the array.
         Value address = addPointerToMemory(objectForAddressValue, j * sizeOfCurrentTypeInBits);
@@ -924,14 +985,14 @@ public class SMGCPAValueVisitorTest {
               // Out of bounds
               List<ValueAndSMGState> visitedValuesAndStates = arrayPointerExpr.accept(visitor);
               assertThat(visitedValuesAndStates).hasSize(1);
-              ValueAndSMGState visitedValueAndState = visitedValuesAndStates.get(0);
+              ValueAndSMGState visitedValueAndState = visitedValuesAndStates.getFirst();
               // Error state + unknown value
               assertThat(visitedValueAndState.getValue())
                   .isEqualTo(Value.UnknownValue.getInstance());
               // There are 2 errors. 1 read and 1 write error. The read error is first however and
               // its the one we are interested in.
               assertThat(visitedValueAndState.getState().getErrorInfo()).hasSize(1);
-              SMGErrorInfo error = visitedValueAndState.getState().getErrorInfo().get(0);
+              SMGErrorInfo error = visitedValueAndState.getState().getErrorInfo().getFirst();
 
               assertThat(error.isInvalidRead()).isTrue();
             } else {
@@ -939,7 +1000,7 @@ public class SMGCPAValueVisitorTest {
 
               // Assert the correct return values depending on type
               assertThat(resultList).hasSize(1);
-              Value resultValue = resultList.get(0).getValue();
+              Value resultValue = resultList.getFirst().getValue();
               checkValue(currentValueArrayType, realIndex, resultValue);
             }
           }
@@ -979,7 +1040,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -1011,7 +1072,7 @@ public class SMGCPAValueVisitorTest {
       writeToStackVariableInMemoryModel(arrayVariableName, 0, POINTER_SIZE_IN_BITS, addressValue);
       // Stack variable holding the address (the pointer) to the address of the array
       addStackVariableToMemoryModel(addressToAddressVariableName, POINTER_SIZE_IN_BITS);
-      // We need a mapping from addressForAddressValue to a SMGValue that is mapped to a
+      // We need a mapping from addressForAddressValue to an SMGValue that is mapped to a
       // SMGPointsToEdge (modeling the pointer)
       SMGObject objectForAddressValue =
           currentState.getMemoryModel().getStackFrames().peek().getVariable(arrayVariableName);
@@ -1022,7 +1083,7 @@ public class SMGCPAValueVisitorTest {
 
       // Now write some distinct values into the array, for signed we want to test negatives!
       for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+        // Create a Value that we want to be mapped to an SMGValue to write into the array depending
         // on the type
         Value arrayValue = transformInputIntoValue(currentArrayType, k);
 
@@ -1042,7 +1103,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -1082,7 +1143,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -1123,7 +1184,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -1169,7 +1230,7 @@ public class SMGCPAValueVisitorTest {
       // Now write some distinct values into the array, for signed we want to test negatives!
       // Also create pointers
       for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+        // Create a Value that we want to be mapped to an SMGValue to write into the array depending
         // on the type
         Value arrayValue = transformInputIntoValue(currentArrayType, k);
 
@@ -1228,7 +1289,7 @@ public class SMGCPAValueVisitorTest {
 
             // Assert the correct return values depending on type
             assertThat(resultList).hasSize(1);
-            Value resultValue = resultList.get(0).getValue();
+            Value resultValue = resultList.getFirst().getValue();
             checkValue(currentArrayType, pointerNum + index, resultValue);
           }
         }
@@ -1329,13 +1390,13 @@ public class SMGCPAValueVisitorTest {
 
             List<ValueAndSMGState> visitedValuesAndStates = arrayPointerExpr.accept(visitor);
             assertThat(visitedValuesAndStates).hasSize(1);
-            ValueAndSMGState visitedValueAndState = visitedValuesAndStates.get(0);
+            ValueAndSMGState visitedValueAndState = visitedValuesAndStates.getFirst();
             // Error state + unknown value
             assertThat(visitedValueAndState.getValue()).isEqualTo(Value.UnknownValue.getInstance());
             // There are 2 errors. 1 read and 1 write error. The read error is first however and
             // it's the one we are interested in.
             assertThat(visitedValueAndState.getState().getErrorInfo()).hasSize(1);
-            SMGErrorInfo error = visitedValueAndState.getState().getErrorInfo().get(0);
+            SMGErrorInfo error = visitedValueAndState.getState().getErrorInfo().getFirst();
 
             assertThat(error.isInvalidRead()).isTrue();
 
@@ -1399,7 +1460,7 @@ public class SMGCPAValueVisitorTest {
       // Now write some distinct values into the array, for signed we want to test negatives!
       // Also create pointers
       for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+        // Create a Value that we want to be mapped to an SMGValue to write into the array depending
         // on the type
         Value arrayValue = transformInputIntoValue(currentArrayType, k);
 
@@ -1461,7 +1522,7 @@ public class SMGCPAValueVisitorTest {
 
             // Assert the correct return values depending on type
             assertThat(resultList).hasSize(1);
-            Value resultValue = resultList.get(0).getValue();
+            Value resultValue = resultList.getFirst().getValue();
             checkValue(currentArrayType, pointerNum + index, resultValue);
           }
         }
@@ -1498,7 +1559,7 @@ public class SMGCPAValueVisitorTest {
 
       // Now write some distinct values into the array, for signed we want to test negatives!
       for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+        // Create a Value that we want to be mapped to an SMGValue to write into the array depending
         // on the type
         Value arrayValue = transformInputIntoValue(currentArrayType, k);
 
@@ -1528,7 +1589,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           checkValue(currentArrayType, k, resultValue);
         }
       }
@@ -1583,7 +1644,7 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct return values depending on type
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           assertThat(resultValue.isNumericValue()).isTrue();
           assertThat(resultValue.asNumericValue().longValue()).isEqualTo(j - k);
         }
@@ -1625,10 +1686,10 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
-        assertThat(value.asNumericValue().bigInteger())
+        assertThat(value.asNumericValue().bigIntegerValue())
             .isEqualTo(convertToType(BigInteger.valueOf(testChar), typeToTest));
       }
     }
@@ -1665,11 +1726,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigInteger())
+        assertThat(value.asNumericValue().bigIntegerValue())
             .isEqualTo(convertToType(BigInteger.valueOf(testValue), typeToTest));
       }
     }
@@ -1706,11 +1767,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigInteger())
+        assertThat(value.asNumericValue().bigIntegerValue())
             .isEqualTo(convertToType(BigInteger.valueOf(testValue), typeToTest));
       }
     }
@@ -1747,11 +1808,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigInteger())
+        assertThat(value.asNumericValue().bigIntegerValue())
             .isEqualTo(convertToType(BigInteger.valueOf(testValue), typeToTest));
       }
     }
@@ -1779,7 +1840,7 @@ public class SMGCPAValueVisitorTest {
       BigInteger.valueOf(1),
       BigInteger.valueOf(Integer.MAX_VALUE),
       BigInteger.valueOf(Integer.MAX_VALUE).multiply(BigInteger.TWO),
-      BigInteger.valueOf(Integer.MAX_VALUE).multiply(BigInteger.TWO).add(BigInteger.ONE)
+      BigInteger.valueOf(Integer.MAX_VALUE).multiply(BigInteger.TWO).add(BigInteger.ONE),
     };
 
     for (CType typeToTest : BIT_FIELD_TYPES) {
@@ -1793,11 +1854,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigInteger())
+        assertThat(value.asNumericValue().bigIntegerValue())
             .isEqualTo(convertToType(testValue, typeToTest));
       }
     }
@@ -1834,11 +1895,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigInteger())
+        assertThat(value.asNumericValue().bigIntegerValue())
             .isEqualTo(convertToType(BigInteger.valueOf(testValue), typeToTest));
       }
     }
@@ -1866,7 +1927,7 @@ public class SMGCPAValueVisitorTest {
       BigInteger.valueOf(1),
       BigInteger.valueOf(Long.MAX_VALUE),
       BigInteger.valueOf(Long.MAX_VALUE).multiply(BigInteger.TWO),
-      BigInteger.valueOf(Long.MAX_VALUE).multiply(BigInteger.TWO).add(BigInteger.ONE)
+      BigInteger.valueOf(Long.MAX_VALUE).multiply(BigInteger.TWO).add(BigInteger.ONE),
     };
 
     for (CType typeToTest : BIT_FIELD_TYPES) {
@@ -1880,11 +1941,11 @@ public class SMGCPAValueVisitorTest {
         List<ValueAndSMGState> result = castExpression.accept(visitor);
         // Chars are translated into their numeric values by the value analysis
         // Also, the numeric value is max 255, therefore every datatype should be able to hold that!
-        Value value = result.get(0).getValue();
+        Value value = result.getFirst().getValue();
 
         assertThat(value).isInstanceOf(NumericValue.class);
         // Check the returned value. It should be == for all except char
-        assertThat(value.asNumericValue().bigInteger())
+        assertThat(value.asNumericValue().bigIntegerValue())
             .isEqualTo(convertToType(testValue, typeToTest));
       }
     }
@@ -1923,7 +1984,7 @@ public class SMGCPAValueVisitorTest {
               variableName + "NotQual",
               variableName + "NotQual",
               variableName + typeToTest,
-              CDefaults.forType(typeToTest, FileLocation.DUMMY));
+              CDefaults.forType(MACHINE_MODEL, typeToTest, FileLocation.DUMMY));
 
       CUnaryExpression amperVar = wrapInAmper(new CIdExpression(FileLocation.DUMMY, decl));
 
@@ -1931,28 +1992,28 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().longValue() == 0)
-          .isTrue();
+      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+          .isEqualTo(BigInteger.ZERO);
       resultValue = ((AddressExpression) resultValue).getMemoryAddress();
       // & actually changes the state!
-      currentState = resultList.get(0).getState();
+      currentState = resultList.getFirst().getState();
 
       SMGObject expectedTarget =
           currentState
               .getMemoryModel()
               .getObjectForVisibleVariable(variableName + typeToTest)
               .orElseThrow();
-      BigInteger expectedOffset = BigInteger.ZERO;
+      Value expectedOffset = new NumericValue(BigInteger.ZERO);
       // The returned Value is an address, theoretically addresses may be any Value type
       assertThat(resultValue).isInstanceOf(Value.class);
       // First check general existance of a points to edge, then its target and offset
-      assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
           .isTrue();
-      assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
           .isEqualTo(expectedTarget);
-      assertThat(currentState.dereferencePointer(resultValue).get(0).getOffsetForObject())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
           .isEqualTo(expectedOffset);
       // Check that the other methods return the correct points-to-edge leading to the correct
       // memory location and never to the 0 object
@@ -1965,9 +2026,8 @@ public class SMGCPAValueVisitorTest {
       assertThat(
               currentState
                   .getMemoryModel()
-                  .getAddressValueForPointsToTarget(expectedTarget, expectedOffset)
-                  .isPresent())
-          .isTrue();
+                  .getAddressValueForPointsToTarget(expectedTarget, expectedOffset))
+          .isPresent();
 
       SMGValue smgValueForPointer =
           currentState
@@ -2001,28 +2061,28 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().longValue() == 0)
-          .isTrue();
+      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+          .isEqualTo(BigInteger.ZERO);
       resultValue = ((AddressExpression) resultValue).getMemoryAddress();
       // & actually changes the state!
-      currentState = resultList.get(0).getState();
+      currentState = resultList.getFirst().getState();
 
       SMGObject expectedTarget =
           currentState
               .getMemoryModel()
               .getObjectForVisibleVariable(arrayVariableName)
               .orElseThrow();
-      BigInteger expectedOffset = BigInteger.ZERO;
+      Value expectedOffset = new NumericValue(BigInteger.ZERO);
       // The returned Value is an address, theoretically addresses may be any Value type
       assertThat(resultValue).isInstanceOf(Value.class);
       // First check general existance of a points to edge, then its target and offset
-      assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
           .isTrue();
-      assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
           .isEqualTo(expectedTarget);
-      assertThat(currentState.dereferencePointer(resultValue).get(0).getOffsetForObject())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
           .isEqualTo(expectedOffset);
       // Check that the other methods return the correct points-to-edge leading to the correct
       // memory location and never to the 0 object
@@ -2035,9 +2095,8 @@ public class SMGCPAValueVisitorTest {
       assertThat(
               currentState
                   .getMemoryModel()
-                  .getAddressValueForPointsToTarget(expectedTarget, expectedOffset)
-                  .isPresent())
-          .isTrue();
+                  .getAddressValueForPointsToTarget(expectedTarget, expectedOffset))
+          .isPresent();
 
       SMGValue smgValueForPointer =
           currentState
@@ -2081,26 +2140,26 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().longValue() == 0)
-            .isTrue();
+        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+            .isEqualTo(BigInteger.ZERO);
         resultValue = ((AddressExpression) resultValue).getMemoryAddress();
         // & actually changes the state!
-        currentState = resultList.get(0).getState();
+        currentState = resultList.getFirst().getState();
 
         SMGObject expectedTarget =
-            currentState.dereferencePointer(heapAddress).get(0).getSMGObject();
-        BigInteger expectedOffset =
-            BigInteger.valueOf(currentIndice).multiply(sizeOfCurrentTypeInBits);
+            currentState.dereferencePointer(heapAddress).getFirst().getSMGObject();
+        Value expectedOffset =
+            new NumericValue(BigInteger.valueOf(currentIndice).multiply(sizeOfCurrentTypeInBits));
         // The returned Value is an address, theoretically addresses may be any Value type
         assertThat(resultValue).isInstanceOf(Value.class);
         // First check general existance of a points to edge, then its target and offset
-        assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
             .isTrue();
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
             .isEqualTo(expectedTarget);
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getOffsetForObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
             .isEqualTo(expectedOffset);
         // Check that the other methods return the correct points-to-edge leading to the correct
         // memory location and never to the 0 object
@@ -2113,9 +2172,8 @@ public class SMGCPAValueVisitorTest {
         assertThat(
                 currentState
                     .getMemoryModel()
-                    .getAddressValueForPointsToTarget(expectedTarget, expectedOffset)
-                    .isPresent())
-            .isTrue();
+                    .getAddressValueForPointsToTarget(expectedTarget, expectedOffset))
+            .isPresent();
 
         SMGValue smgValueForPointer =
             currentState
@@ -2156,26 +2214,26 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().longValue() == 0)
-            .isTrue();
+        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+            .isEqualTo(BigInteger.ZERO);
         resultValue = ((AddressExpression) resultValue).getMemoryAddress();
         // & actually changes the state!
-        currentState = resultList.get(0).getState();
+        currentState = resultList.getFirst().getState();
 
         SMGObject expectedTarget =
-            currentState.dereferencePointer(heapAddress).get(0).getSMGObject();
-        BigInteger expectedOffset =
-            BigInteger.valueOf(currentIndice).multiply(sizeOfCurrentTypeInBits);
+            currentState.dereferencePointer(heapAddress).getFirst().getSMGObject();
+        Value expectedOffset =
+            new NumericValue(BigInteger.valueOf(currentIndice).multiply(sizeOfCurrentTypeInBits));
         // The returned Value is an address, theoretically addresses may be any Value type
         assertThat(resultValue).isInstanceOf(Value.class);
         // First check general existance of a points to edge, then its target and offset
-        assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
             .isTrue();
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
             .isEqualTo(expectedTarget);
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getOffsetForObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
             .isEqualTo(expectedOffset);
         // Check that the other methods return the correct points-to-edge leading to the correct
         // memory location and never to the 0 object
@@ -2188,9 +2246,8 @@ public class SMGCPAValueVisitorTest {
         assertThat(
                 currentState
                     .getMemoryModel()
-                    .getAddressValueForPointsToTarget(expectedTarget, expectedOffset)
-                    .isPresent())
-            .isTrue();
+                    .getAddressValueForPointsToTarget(expectedTarget, expectedOffset))
+            .isPresent();
 
         SMGValue smgValueForPointer =
             currentState
@@ -2230,28 +2287,28 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().longValue() == 0)
-          .isTrue();
+      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+          .isEqualTo(BigInteger.ZERO);
       resultValue = ((AddressExpression) resultValue).getMemoryAddress();
       // & actually changes the state!
-      currentState = resultList.get(0).getState();
+      currentState = resultList.getFirst().getState();
 
       SMGObject expectedTarget =
           currentState
               .getMemoryModel()
               .getObjectForVisibleVariable(COMPOSITE_VARIABLE_NAME + j)
               .orElseThrow();
-      BigInteger expectedOffset = BigInteger.ZERO;
+      Value expectedOffset = new NumericValue(BigInteger.ZERO);
       // The returned Value is an address, theoretically addresses may be any Value type
       assertThat(resultValue).isInstanceOf(Value.class);
       // First check general existance of a points to edge, then its target and offset
-      assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
           .isTrue();
-      assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
           .isEqualTo(expectedTarget);
-      assertThat(currentState.dereferencePointer(resultValue).get(0).getOffsetForObject())
+      assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
           .isEqualTo(expectedOffset);
       // Check that the other methods return the correct points-to-edge leading to the correct
       // memory location and never to the 0 object
@@ -2264,9 +2321,8 @@ public class SMGCPAValueVisitorTest {
       assertThat(
               currentState
                   .getMemoryModel()
-                  .getAddressValueForPointsToTarget(expectedTarget, expectedOffset)
-                  .isPresent())
-          .isTrue();
+                  .getAddressValueForPointsToTarget(expectedTarget, expectedOffset))
+          .isPresent();
 
       SMGValue smgValueForPointer =
           currentState
@@ -2302,13 +2358,13 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().longValue() == 0)
-          .isTrue();
+      assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+          .isEqualTo(BigInteger.ZERO);
       resultValue = ((AddressExpression) resultValue).getMemoryAddress();
       // & actually changes the state!
-      currentState = resultList.get(0).getState();
+      currentState = resultList.getFirst().getState();
 
       // We want the address of the address to the struct!
       SMGObject expectedTarget =
@@ -2316,12 +2372,12 @@ public class SMGCPAValueVisitorTest {
               .getMemoryModel()
               .getObjectForVisibleVariable(COMPOSITE_VARIABLE_NAME + j)
               .orElseThrow();
-      BigInteger expectedOffset = BigInteger.ZERO;
+      Value expectedOffset = new NumericValue(BigInteger.ZERO);
       // The returned Value is an address, theoretically addresses may be any Value type
       assertThat(resultValue).isInstanceOf(Value.class);
       // First check general existance of a points to edge, then its target and offset
       SMGStateAndOptionalSMGObjectAndOffset resultMaybeTarget =
-          currentState.dereferencePointer(resultValue).get(0);
+          currentState.dereferencePointer(resultValue).getFirst();
       assertThat(resultMaybeTarget.hasSMGObjectAndOffset()).isTrue();
       assertThat(resultMaybeTarget.getSMGObject()).isEqualTo(expectedTarget);
       assertThat(resultMaybeTarget.getOffsetForObject()).isEqualTo(expectedOffset);
@@ -2336,9 +2392,8 @@ public class SMGCPAValueVisitorTest {
       assertThat(
               currentState
                   .getMemoryModel()
-                  .getAddressValueForPointsToTarget(expectedTarget, expectedOffset)
-                  .isPresent())
-          .isTrue();
+                  .getAddressValueForPointsToTarget(expectedTarget, expectedOffset))
+          .isPresent();
 
       SMGValue smgValueForPointer =
           currentState
@@ -2380,26 +2435,26 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().longValue() == 0)
-            .isTrue();
+        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+            .isEqualTo(BigInteger.ZERO);
         resultValue = ((AddressExpression) resultValue).getMemoryAddress();
         // & actually changes the state!
-        currentState = resultList.get(0).getState();
+        currentState = resultList.getFirst().getState();
 
         SMGObject expectedTarget =
-            currentState.dereferencePointer(addressForHeap).get(0).getSMGObject();
-        BigInteger expectedOffset =
-            BigInteger.valueOf(getOffsetInBitsWithPadding(listOfTypes, indice));
+            currentState.dereferencePointer(addressForHeap).getFirst().getSMGObject();
+        Value expectedOffset =
+            new NumericValue(BigInteger.valueOf(getOffsetInBitsWithPadding(listOfTypes, indice)));
         // The returned Value is an address, theoretically addresses may be any Value type
         assertThat(resultValue).isInstanceOf(Value.class);
         // First check general existance of a points to edge, then its target and offset
-        assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
             .isTrue();
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
             .isEqualTo(expectedTarget);
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getOffsetForObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
             .isEqualTo(expectedOffset);
         // Check that the other methods return the correct points-to-edge leading to the correct
         // memory location and never to the 0 object
@@ -2412,9 +2467,8 @@ public class SMGCPAValueVisitorTest {
         assertThat(
                 currentState
                     .getMemoryModel()
-                    .getAddressValueForPointsToTarget(expectedTarget, expectedOffset)
-                    .isPresent())
-            .isTrue();
+                    .getAddressValueForPointsToTarget(expectedTarget, expectedOffset))
+            .isPresent();
 
         SMGValue smgValueForPointer =
             currentState
@@ -2455,29 +2509,29 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         assertThat(((AddressExpression) resultValue).getOffset().isNumericValue()).isTrue();
-        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().longValue() == 0)
-            .isTrue();
+        assertThat(((AddressExpression) resultValue).getOffset().asNumericValue().bigIntegerValue())
+            .isEqualTo(BigInteger.ZERO);
         resultValue = ((AddressExpression) resultValue).getMemoryAddress();
         // & actually changes the state!
-        currentState = resultList.get(0).getState();
+        currentState = resultList.getFirst().getState();
 
         SMGObject expectedTarget =
             currentState
                 .getMemoryModel()
                 .getObjectForVisibleVariable(COMPOSITE_VARIABLE_NAME + j)
                 .orElseThrow();
-        BigInteger expectedOffset =
-            BigInteger.valueOf(getOffsetInBitsWithPadding(listOfTypes, indice));
+        Value expectedOffset =
+            new NumericValue(BigInteger.valueOf(getOffsetInBitsWithPadding(listOfTypes, indice)));
         // The returned Value is an address, theoretically addresses may be any Value type
         assertThat(resultValue).isInstanceOf(Value.class);
         // First check general existance of a points to edge, then its target and offset
-        assertThat(currentState.dereferencePointer(resultValue).get(0).hasSMGObjectAndOffset())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().hasSMGObjectAndOffset())
             .isTrue();
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getSMGObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getSMGObject())
             .isEqualTo(expectedTarget);
-        assertThat(currentState.dereferencePointer(resultValue).get(0).getOffsetForObject())
+        assertThat(currentState.dereferencePointer(resultValue).getFirst().getOffsetForObject())
             .isEqualTo(expectedOffset);
         // Check that the other methods return the correct points-to-edge leading to the correct
         // memory location and never to the 0 object
@@ -2490,9 +2544,8 @@ public class SMGCPAValueVisitorTest {
         assertThat(
                 currentState
                     .getMemoryModel()
-                    .getAddressValueForPointsToTarget(expectedTarget, expectedOffset)
-                    .isPresent())
-            .isTrue();
+                    .getAddressValueForPointsToTarget(expectedTarget, expectedOffset))
+            .isPresent();
 
         SMGValue smgValueForPointer =
             currentState
@@ -2532,7 +2585,7 @@ public class SMGCPAValueVisitorTest {
               variableName + "NotQual",
               variableName + "NotQual",
               variableName,
-              CDefaults.forType(typeToTest, FileLocation.DUMMY));
+              CDefaults.forType(MACHINE_MODEL, typeToTest, FileLocation.DUMMY));
 
       CUnaryExpression sizeOfVar = wrapInSizeof(new CIdExpression(FileLocation.DUMMY, decl));
 
@@ -2540,11 +2593,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should == size if the current type by index (in bytes)
       assertThat(resultValue).isInstanceOf(NumericValue.class);
       // Both as bytes
-      assertThat(resultValue.asNumericValue().bigInteger())
+      assertThat(resultValue.asNumericValue().bigIntegerValue())
           .isEqualTo(MACHINE_MODEL.getSizeof(typeToTest));
       resetSMGStateAndVisitor();
     }
@@ -2577,11 +2630,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should == size if the current type by index (in bytes)
         assertThat(resultValue).isInstanceOf(NumericValue.class);
         // Both as bytes
-        assertThat(resultValue.asNumericValue().bigInteger())
+        assertThat(resultValue.asNumericValue().bigIntegerValue())
             .isEqualTo(MACHINE_MODEL.getSizeof(listOfTypes.get(i)));
       }
       // Test sizeof the entire struct
@@ -2598,11 +2651,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should == size of the entire struct but with padding
       assertThat(resultValue).isInstanceOf(NumericValue.class);
       // Transform the result in bits
-      assertThat(resultValue.asNumericValue().bigInteger().multiply(BigInteger.valueOf(8)))
+      assertThat(resultValue.asNumericValue().bigIntegerValue().multiply(BigInteger.valueOf(8)))
           .isEqualTo(BigInteger.valueOf(getSizeInBitsForListOfCTypeWithPadding(listOfTypes)));
       resetSMGStateAndVisitor();
     }
@@ -2621,7 +2674,7 @@ public class SMGCPAValueVisitorTest {
 
       // Write every possible values once
       for (int i = 0; i < j; i++) {
-        // Create a Value that we want to be mapped to a SMGValue to write into the union
+        // Create a Value that we want to be mapped to an SMGValue to write into the union
         Value intValue = new NumericValue(j);
 
         // Write to the stack union; Note: this is always offset 0!
@@ -2648,11 +2701,11 @@ public class SMGCPAValueVisitorTest {
 
           // Assert the correct returns
           assertThat(resultList).hasSize(1);
-          Value resultValue = resultList.get(0).getValue();
+          Value resultValue = resultList.getFirst().getValue();
           // The returned Value should == size of the current type (at index i)
           assertThat(resultValue).isInstanceOf(NumericValue.class);
           // Transform the result in bits
-          assertThat(resultValue.asNumericValue().bigInteger())
+          assertThat(resultValue.asNumericValue().bigIntegerValue())
               .isEqualTo(MACHINE_MODEL.getSizeof(listOfTypes.get(k)));
         }
 
@@ -2670,11 +2723,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should == size of the entire struct but with padding
         assertThat(resultValue).isInstanceOf(NumericValue.class);
         // Transform the result in bits
-        assertThat(resultValue.asNumericValue().bigInteger().multiply(BigInteger.valueOf(8)))
+        assertThat(resultValue.asNumericValue().bigIntegerValue().multiply(BigInteger.valueOf(8)))
             .isEqualTo(BigInteger.valueOf(getLargestSizeInBitsForListOfCType(listOfTypes)));
       }
       resetSMGStateAndVisitor();
@@ -2702,11 +2755,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should == size of the current type (at index i)
         assertThat(resultValue).isInstanceOf(NumericValue.class);
         // Transform the result in bits
-        assertThat(resultValue.asNumericValue().bigInteger())
+        assertThat(resultValue.asNumericValue().bigIntegerValue())
             .isEqualTo(MACHINE_MODEL.getSizeof(currentTestType));
       }
 
@@ -2718,11 +2771,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should == size of the current type (at index i)
       assertThat(resultValue).isInstanceOf(NumericValue.class);
       // Transform the result in bits
-      assertThat(resultValue.asNumericValue().bigInteger().intValue())
+      assertThat(resultValue.asNumericValue().bigIntegerValue().intValue())
           .isEqualTo(POINTER_SIZE_IN_BITS / 8);
 
       resetSMGStateAndVisitor();
@@ -2752,11 +2805,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should == size of the current type (at index i)
         assertThat(resultValue).isInstanceOf(NumericValue.class);
         // Transform the result in bits
-        assertThat(resultValue.asNumericValue().bigInteger())
+        assertThat(resultValue.asNumericValue().bigIntegerValue())
             .isEqualTo(MACHINE_MODEL.getSizeof(currentTestType));
       }
 
@@ -2771,11 +2824,11 @@ public class SMGCPAValueVisitorTest {
 
       // Assert the correct returns
       assertThat(resultList).hasSize(1);
-      Value resultValue = resultList.get(0).getValue();
+      Value resultValue = resultList.getFirst().getValue();
       // The returned Value should == size of the current type (at index i)
       assertThat(resultValue).isInstanceOf(NumericValue.class);
       // Transform the result in bits
-      assertThat(resultValue.asNumericValue().bigInteger().intValue())
+      assertThat(resultValue.asNumericValue().bigIntegerValue().intValue())
           .isEqualTo(POINTER_SIZE_IN_BITS / 8);
 
       resetSMGStateAndVisitor();
@@ -2806,11 +2859,11 @@ public class SMGCPAValueVisitorTest {
 
         // Assert the correct returns
         assertThat(resultList).hasSize(1);
-        Value resultValue = resultList.get(0).getValue();
+        Value resultValue = resultList.getFirst().getValue();
         // The returned Value should == size of the current type (at index i)
         assertThat(resultValue).isInstanceOf(NumericValue.class);
         // Transform the result in bits
-        assertThat(resultValue.asNumericValue().bigInteger())
+        assertThat(resultValue.asNumericValue().bigIntegerValue())
             .isEqualTo(MACHINE_MODEL.getSizeof(currentTestType));
       }
 
@@ -2832,7 +2885,7 @@ public class SMGCPAValueVisitorTest {
    */
   private CUnaryExpression wrapInAmper(CExpression exprToWrap) {
     CType typeOfExpr = exprToWrap.getExpressionType();
-    CType newType = new CPointerType(false, false, typeOfExpr);
+    CType newType = new CPointerType(CTypeQualifiers.NONE, typeOfExpr);
     return new CUnaryExpression(
         FileLocation.DUMMY, newType, exprToWrap, CUnaryExpression.UnaryOperator.AMPER);
   }
@@ -2893,10 +2946,11 @@ public class SMGCPAValueVisitorTest {
     List<CCompositeTypeMemberDeclaration> members = builder.build();
 
     CCompositeType structType =
-        new CCompositeType(false, false, ComplexTypeKind.STRUCT, members, "someName", "someName");
+        new CCompositeType(
+            CTypeQualifiers.NONE, ComplexTypeKind.STRUCT, members, "someName", "someName");
     CElaboratedType elaboratedType =
         new CElaboratedType(
-            false, false, ComplexTypeKind.STRUCT, "someName", "someName", structType);
+            CTypeQualifiers.NONE, ComplexTypeKind.STRUCT, "someName", "someName", structType);
     return MACHINE_MODEL.getSizeofInBits(elaboratedType).intValue();
   }
 
@@ -2957,15 +3011,15 @@ public class SMGCPAValueVisitorTest {
    *
    * @param variableName name of the struct variable on the stack.
    * @param testTypesList list of types in the struct in the order of the list.
-   * @throws SMG2Exception should never be thrown.
+   * @throws SMGException should never be thrown.
    */
   private void createStackVarOnStackAndFill(String variableName, List<CType> testTypesList)
-      throws SMG2Exception {
+      throws SMGException {
     addStackVariableToMemoryModel(
         variableName, getSizeInBitsForListOfCTypeWithPadding(testTypesList));
 
     for (int i = 0; i < testTypesList.size(); i++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = new NumericValue(i);
 
       // Write to the stack var
@@ -2986,13 +3040,14 @@ public class SMGCPAValueVisitorTest {
     List<CCompositeTypeMemberDeclaration> members = builder.build();
 
     CCompositeType structType =
-        new CCompositeType(false, false, ComplexTypeKind.STRUCT, members, structName, structName);
+        new CCompositeType(
+            CTypeQualifiers.NONE, ComplexTypeKind.STRUCT, members, structName, structName);
 
     CElaboratedType elaboratedType =
         new CElaboratedType(
-            false, false, ComplexTypeKind.STRUCT, structName, structName, structType);
+            CTypeQualifiers.NONE, ComplexTypeKind.STRUCT, structName, structName, structType);
 
-    CPointerType structPointerType = new CPointerType(false, false, elaboratedType);
+    CPointerType structPointerType = new CPointerType(CTypeQualifiers.NONE, elaboratedType);
 
     CSimpleDeclaration declararation =
         new CVariableDeclaration(
@@ -3003,7 +3058,7 @@ public class SMGCPAValueVisitorTest {
             variableName + "NotQual",
             variableName + "NotQual",
             variableName,
-            CDefaults.forType(structPointerType, FileLocation.DUMMY));
+            CDefaults.forType(MACHINE_MODEL, structPointerType, FileLocation.DUMMY));
 
     CIdExpression structVarExpr = new CIdExpression(FileLocation.DUMMY, declararation);
 
@@ -3057,12 +3112,13 @@ public class SMGCPAValueVisitorTest {
     List<CCompositeTypeMemberDeclaration> members = builder.build();
 
     CCompositeType structType =
-        new CCompositeType(false, false, structOrUnion, members, structName, structName);
+        new CCompositeType(CTypeQualifiers.NONE, structOrUnion, members, structName, structName);
 
     CElaboratedType elaboratedType =
-        new CElaboratedType(false, false, structOrUnion, structName, structName, structType);
+        new CElaboratedType(
+            CTypeQualifiers.NONE, structOrUnion, structName, structName, structType);
 
-    CPointerType structPointerType = new CPointerType(false, false, elaboratedType);
+    CPointerType structPointerType = new CPointerType(CTypeQualifiers.NONE, elaboratedType);
 
     CSimpleDeclaration declararation;
 
@@ -3076,7 +3132,7 @@ public class SMGCPAValueVisitorTest {
               variableName + "NotQual",
               variableName + "NotQual",
               variableName,
-              CDefaults.forType(structPointerType, FileLocation.DUMMY));
+              CDefaults.forType(MACHINE_MODEL, structPointerType, FileLocation.DUMMY));
     } else {
       declararation =
           new CVariableDeclaration(
@@ -3087,7 +3143,7 @@ public class SMGCPAValueVisitorTest {
               variableName + "NotQual",
               variableName + "NotQual",
               variableName,
-              CDefaults.forType(elaboratedType, FileLocation.DUMMY));
+              CDefaults.forType(MACHINE_MODEL, elaboratedType, FileLocation.DUMMY));
     }
 
     return new CIdExpression(FileLocation.DUMMY, declararation);
@@ -3140,14 +3196,14 @@ public class SMGCPAValueVisitorTest {
    * of the element. Check results using checkValue()!
    */
   private void setupStackArray(String arrayVariableName, CType arrayElementType)
-      throws SMG2Exception {
+      throws SMGException {
     int sizeOfCurrentTypeInBits = MACHINE_MODEL.getSizeof(arrayElementType).intValue() * 8;
     // Create the array on the stack; size is type size in bits * size of array
     addStackVariableToMemoryModel(arrayVariableName, sizeOfCurrentTypeInBits * TEST_ARRAY_LENGTH);
 
     // Now write some distinct values into the array, for signed we want to test negatives!
     for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+      // Create a Value that we want to be mapped to an SMGValue to write into the array depending
       // on the type
       Value arrayValue = transformInputIntoValue(arrayElementType, k);
 
@@ -3166,10 +3222,10 @@ public class SMGCPAValueVisitorTest {
    * @param listOfTypes the list of types in the struct in the order they should be in the struct.
    * @return the Value that is the address of the memory on the heap! NOT the stack!
    * @throws InvalidConfigurationException should never be thrown.
-   * @throws SMG2Exception should never be thrown.
+   * @throws SMGException should never be thrown.
    */
   private Value setupHeapStructAndFill(String stackVariableName, List<CType> listOfTypes)
-      throws InvalidConfigurationException, SMG2Exception {
+      throws InvalidConfigurationException, SMGException {
     // Address of the struct on the heap
     Value addressValue = SymbolicValueFactory.getInstance().newIdentifier(null);
 
@@ -3182,7 +3238,7 @@ public class SMGCPAValueVisitorTest {
     // Fill struct completely
     for (int i = 0; i < listOfTypes.size(); i++) {
       CType currentType = listOfTypes.get(i);
-      // Create a Value that we want to be mapped to a SMGValue to write into the struct
+      // Create a Value that we want to be mapped to an SMGValue to write into the struct
       Value intValue = transformInputIntoValue(currentType, i);
       // write the value into the struct on the heap
       writeToHeapObjectByAddress(
@@ -3195,7 +3251,7 @@ public class SMGCPAValueVisitorTest {
   }
 
   /*
-   * Creates a array on the heap with TEST_ARRAY_LENGTH entries filled via
+   * Creates an array on the heap with TEST_ARRAY_LENGTH entries filled via
    * transformInputIntoValue() by indice position with the type entered and the
    * stack variable accessable via the String that is pointing to the array on the heap.
    * Check return value with checkValue()!
@@ -3203,7 +3259,7 @@ public class SMGCPAValueVisitorTest {
    * returns the addressValue to the heap location. (NOT THE STACK!) If you want the stack use currentState.getMemoryModel().getObjectForVisibleVariable(stackVariableName)
    */
   private Value setupHeapArray(String arrayVariableName, CType currentArrayType)
-      throws InvalidConfigurationException, SMG2Exception {
+      throws InvalidConfigurationException, SMGException {
     int sizeOfCurrentTypeInBits = MACHINE_MODEL.getSizeof(currentArrayType).intValue() * 8;
     // address to the heap where the array starts
     Value addressValue = SymbolicValueFactory.getInstance().newIdentifier(null);
@@ -3215,7 +3271,7 @@ public class SMGCPAValueVisitorTest {
 
     // Now write some distinct values into the array, for signed we want to test negatives!
     for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
-      // Create a Value that we want to be mapped to a SMGValue to write into the array depending
+      // Create a Value that we want to be mapped to an SMGValue to write into the array depending
       // on the type
       Value arrayValue = transformInputIntoValue(currentArrayType, k);
 
@@ -3230,7 +3286,7 @@ public class SMGCPAValueVisitorTest {
    * Create TEST_ARRAY_LENGTH.size() index variables
    * accessed via indexVariableName + indexNumber with INT_TYPE as index type.
    */
-  private void setupIndexVariables(String indexVariableName) throws SMG2Exception {
+  private void setupIndexVariables(String indexVariableName) throws SMGException {
     for (int k = 0; k < TEST_ARRAY_LENGTH; k++) {
       // create length stack variables holding the indices to access i.e. an array
       addStackVariableToMemoryModel(
@@ -3248,15 +3304,17 @@ public class SMGCPAValueVisitorTest {
    * and update the state and visitor. Adds a StackFrame if there is none.
    */
   private void addStackVariableToMemoryModel(String variableName, int sizeInBits)
-      throws SMG2Exception {
+      throws SMGException {
     if (currentState.getMemoryModel().getStackFrames().size() < 1) {
       // If there is no current stack we add it
       currentState = currentState.copyAndAddStackFrame(CFunctionDeclaration.DUMMY);
     }
 
-    currentState = currentState.copyAndAddLocalVariable(sizeInBits, variableName, null);
+    currentState =
+        currentState.copyAndAddLocalVariable(
+            new NumericValue(BigInteger.valueOf(sizeInBits)), variableName, null);
 
-    visitor = new SMGCPAValueVisitor(evaluator, currentState, new DummyCFAEdge(null, null), logger);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger, options);
   }
 
   /*
@@ -3264,7 +3322,8 @@ public class SMGCPAValueVisitorTest {
    * This expects the stack var to be present! Updates the visitor.
    */
   private void writeToStackVariableInMemoryModel(
-      String stackVariableName, int writeOffsetInBits, int writeSizeInBits, Value valueToWrite) {
+      String stackVariableName, int writeOffsetInBits, int writeSizeInBits, Value valueToWrite)
+      throws SMGException {
     if (valueToWrite instanceof AddressExpression) {
       ValueAndSMGState valueToWriteAndState = currentState.transformAddressExpression(valueToWrite);
       valueToWrite = valueToWriteAndState.getValue();
@@ -3275,7 +3334,7 @@ public class SMGCPAValueVisitorTest {
     SMGValue smgValue = valueAndState.getSMGValue();
     currentState = valueAndState.getSMGState();
     currentState =
-        currentState.writeValue(
+        currentState.writeValueWithoutChecks(
             currentState
                 .getMemoryModel()
                 .getObjectForVisibleVariable(stackVariableName)
@@ -3284,13 +3343,13 @@ public class SMGCPAValueVisitorTest {
             BigInteger.valueOf(writeSizeInBits),
             smgValue);
 
-    visitor = new SMGCPAValueVisitor(evaluator, currentState, new DummyCFAEdge(null, null), logger);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger, options);
   }
 
   /**
-   * Creates a SMGObject of the entered size. Then creates a pointer (points to edge) to it at the
-   * offset entered. Then the pointer is mapped to a SMGValue that is mapped to the entered value as
-   * address value. The global state and visitor are updated with the new items.
+   * Creates an SMGObject of the entered size. Then creates a pointer (points to edge) to it at the
+   * offset entered. Then the pointer is mapped to an SMGValue that is mapped to the entered value
+   * as address value. The global state and visitor are updated with the new items.
    *
    * @param offset in bits of the pointer. Essentially where the pointer starts in the object.
    * @param size of the object in bits.
@@ -3301,24 +3360,23 @@ public class SMGCPAValueVisitorTest {
       throws InvalidConfigurationException {
     SymbolicProgramConfiguration spc = currentState.getMemoryModel();
 
-    SMGObject smgHeapObject = SMGObject.of(0, BigInteger.valueOf(size), BigInteger.valueOf(0));
+    SMGObject smgHeapObject =
+        SMGObject.of(0, new NumericValue(BigInteger.valueOf(size)), BigInteger.valueOf(0));
     spc = spc.copyAndAddHeapObject(smgHeapObject);
 
-    // Mapping to the smg points to edge
+    // Mapping to the SMG points to edge
     spc =
-        spc.copyAndAddPointerFromAddressToRegion(
-            addressValue, smgHeapObject, BigInteger.valueOf(offset));
+        spc.copyAndAddPointerFromAddressToMemory(
+            addressValue,
+            smgHeapObject,
+            new NumericValue(BigInteger.valueOf(offset)),
+            0,
+            SMGTargetSpecifier.IS_REGION);
 
     // This state now has the stack variable that is the pointer to the struct and the struct with a
     // value in the second int, and none in the first
-    currentState =
-        SMGState.of(
-            MachineModel.LINUX64,
-            spc,
-            logger,
-            new SMGOptions(Configuration.defaultConfiguration()),
-            currentState.getErrorInfo());
-    visitor = new SMGCPAValueVisitor(evaluator, currentState, new DummyCFAEdge(null, null), logger);
+    currentState = currentState.copyAndReplaceMemoryModel(spc);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger, options);
   }
 
   /**
@@ -3333,19 +3391,20 @@ public class SMGCPAValueVisitorTest {
         currentState.searchOrCreateAddress(pTarget, BigInteger.valueOf(offset));
 
     currentState = addressAndState.getState();
-    visitor = new SMGCPAValueVisitor(evaluator, currentState, new DummyCFAEdge(null, null), logger);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger, options);
     return addressAndState.getValue();
   }
 
   private Value addPointerToExistingHeapObject(int offset, Value addressOfTargetWith0Offset)
-      throws SMG2Exception {
+      throws SMGException {
     // Get the pte for the objects 0 position via the original malloc pointer (always the value in
     // the addressExpr)
     SMGStateAndOptionalSMGObjectAndOffset objectAndOffset =
-        currentState.dereferencePointer(addressOfTargetWith0Offset).get(0);
-    Preconditions.checkArgument(objectAndOffset.getOffsetForObject().longValue() == 0);
+        currentState.dereferencePointer(addressOfTargetWith0Offset).getFirst();
+    Preconditions.checkArgument(
+        objectAndOffset.getOffsetForObject().asNumericValue().longValue() == 0);
 
-    // Mapping to the smg points to edge
+    // Mapping to the SMG points to edge
     ValueAndSMGState newPointerValueAndState =
         currentState.searchOrCreateAddress(
             objectAndOffset.getSMGObject(), BigInteger.valueOf(offset));
@@ -3353,7 +3412,7 @@ public class SMGCPAValueVisitorTest {
 
     // This state now has the stack variable that is the pointer to the struct and the struct with a
     // value in the second int, and none in the first
-    visitor = new SMGCPAValueVisitor(evaluator, currentState, new DummyCFAEdge(null, null), logger);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger, options);
     return newPointerValueAndState.getValue();
   }
 
@@ -3366,14 +3425,14 @@ public class SMGCPAValueVisitorTest {
    *     write!
    * @param writeSizeInBits size of the write.
    * @param valueToWrite value to be written.
-   * @throws SMG2Exception does not happen
+   * @throws SMGException does not happen
    */
   private void writeToHeapObjectByAddress(
       Value addressValue, int writeOffsetInBits, int writeSizeInBits, Value valueToWrite)
-      throws InvalidConfigurationException, SMG2Exception {
+      throws SMGException {
     SymbolicProgramConfiguration spc = currentState.getMemoryModel();
     SMGStateAndOptionalSMGObjectAndOffset targetAndOffset =
-        currentState.dereferencePointer(addressValue).get(0);
+        currentState.dereferencePointer(addressValue).getFirst();
     spc = spc.copyAndCreateValue(valueToWrite);
     spc =
         spc.writeValue(
@@ -3382,14 +3441,8 @@ public class SMGCPAValueVisitorTest {
             BigInteger.valueOf(writeSizeInBits),
             spc.getSMGValueFromValue(valueToWrite).orElseThrow());
 
-    currentState =
-        SMGState.of(
-            MachineModel.LINUX64,
-            spc,
-            logger,
-            new SMGOptions(Configuration.defaultConfiguration()),
-            currentState.getErrorInfo());
-    visitor = new SMGCPAValueVisitor(evaluator, currentState, new DummyCFAEdge(null, null), logger);
+    currentState = currentState.copyAndReplaceMemoryModel(spc);
+    visitor = new SMGCPAValueVisitor(evaluator, currentState, dummyCFAEdge, logger, options);
   }
 
   /**
@@ -3423,7 +3476,7 @@ public class SMGCPAValueVisitorTest {
     CInitializerList initializerList = new CInitializerList(FileLocation.DUMMY, builder.build());
      */
 
-    CArrayType arrayType = new CArrayType(false, false, elementType, length);
+    CArrayType arrayType = new CArrayType(CTypeQualifiers.NONE, elementType, length);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration declararation =
@@ -3442,7 +3495,7 @@ public class SMGCPAValueVisitorTest {
   }
 
   /**
-   * Access an array thats on the stack via subscript. The index used is also a variable on the
+   * Access an array that's on the stack via subscript. The index used is also a variable on the
    * stack. Example: array[index]
    *
    * @param arrayVariableName qualified name of the array on the stack.
@@ -3462,7 +3515,7 @@ public class SMGCPAValueVisitorTest {
     CIntegerLiteralExpression length =
         new CIntegerLiteralExpression(FileLocation.DUMMY, INT_TYPE, BigInteger.valueOf(lengthInt));
 
-    CArrayType arrayType = new CArrayType(false, false, elementType, length);
+    CArrayType arrayType = new CArrayType(CTypeQualifiers.NONE, elementType, length);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration arrayDeclararation =
@@ -3508,7 +3561,7 @@ public class SMGCPAValueVisitorTest {
         new CIntegerLiteralExpression(
             FileLocation.DUMMY, INT_TYPE, BigInteger.valueOf(subscriptIndexInt));
 
-    CPointerType pointerType = new CPointerType(false, false, elementType);
+    CPointerType pointerType = new CPointerType(CTypeQualifiers.NONE, elementType);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration declararation =
@@ -3538,7 +3591,7 @@ public class SMGCPAValueVisitorTest {
    */
   public CArraySubscriptExpression arraySubscriptHeapAccessWithVariable(
       String variableName, String indexVariableName, CType indexVariableType, CType elementType) {
-    CPointerType pointerType = new CPointerType(false, false, elementType);
+    CPointerType pointerType = new CPointerType(CTypeQualifiers.NONE, elementType);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration arrayDeclararation =
@@ -3584,10 +3637,10 @@ public class SMGCPAValueVisitorTest {
             FileLocation.DUMMY, INT_TYPE, BigInteger.valueOf(Math.abs(arrayIndiceInt)));
 
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // The type for the returned value after the binary expr
     // TODO: why the f does this change?
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, elementType);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, elementType);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration idDeclararation =
@@ -3643,7 +3696,7 @@ public class SMGCPAValueVisitorTest {
   public CPointerExpression pointerWithBinaryAccessFromExpression(
       String variableName, CType elementType, int innerIndiceInt, int outerindiceInt) {
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // The inner return type needs to be a nested ** type, since it adds 1 pointer itself we need 1
     // extra
     CPointerExpression inner = arrayPointerAccess(variableName, cPointerReturnType, innerIndiceInt);
@@ -3652,7 +3705,7 @@ public class SMGCPAValueVisitorTest {
             FileLocation.DUMMY, INT_TYPE, BigInteger.valueOf(Math.abs(outerindiceInt)));
 
     // The type for the returned value after the binary expr
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, elementType);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, elementType);
 
     if (outerindiceInt == 0) {
       // *inner
@@ -3695,12 +3748,13 @@ public class SMGCPAValueVisitorTest {
             FileLocation.DUMMY, INT_TYPE, BigInteger.valueOf(Math.abs(indiceInt)));
 
     // The type for the returned value after the first deref type*
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // outermost type; type**
-    CPointerType cPointerPointerReturnType = new CPointerType(false, false, cPointerReturnType);
+    CPointerType cPointerPointerReturnType =
+        new CPointerType(CTypeQualifiers.NONE, cPointerReturnType);
     // The type for the returned value after the binary expr
     // TODO: why the f does this change?
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, elementType);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, elementType);
 
     // initializer = null because we model values/memory using the SMG!
     CVariableDeclaration declararation =
@@ -3760,9 +3814,9 @@ public class SMGCPAValueVisitorTest {
       CType indexVariableType,
       CType elementType) {
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // The type for the returned value after the binary expr
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, INT_TYPE);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, INT_TYPE);
 
     return buildCPointerExpressionFromBinary(
         cPointerReturnType,
@@ -3782,9 +3836,9 @@ public class SMGCPAValueVisitorTest {
       CType indexVariableType,
       CType elementType) {
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // The type for the returned value after the binary expr
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, INT_TYPE);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, INT_TYPE);
 
     return buildCPointerExpressionFromBinary(
         cPointerReturnType,
@@ -3804,9 +3858,9 @@ public class SMGCPAValueVisitorTest {
       CType indexVariableType,
       CType elementType) {
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, elementType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, elementType);
     // The type for the returned value after the binary expr
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, INT_TYPE);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, INT_TYPE);
 
     return buildCPointerExpressionFromBinary(
         cPointerReturnType,
@@ -3823,9 +3877,9 @@ public class SMGCPAValueVisitorTest {
   public CBinaryExpression arrayPointerMinusArrayPointer(
       String leftArrayVariableName, String rightArrayVariableName, CType arrayType) {
     // The type for the returned value after the pointer
-    CPointerType cPointerReturnType = new CPointerType(false, false, arrayType);
+    CPointerType cPointerReturnType = new CPointerType(CTypeQualifiers.NONE, arrayType);
     // The type for the returned value after the binary expr
-    CPointerType cPointerBinaryOperType = new CPointerType(false, false, INT_TYPE);
+    CPointerType cPointerBinaryOperType = new CPointerType(CTypeQualifiers.NONE, INT_TYPE);
 
     // In this case the operation and binary type are always equal!
     return new CBinaryExpression(
@@ -3885,8 +3939,8 @@ public class SMGCPAValueVisitorTest {
     assertThat(valueToCheck).isInstanceOf(expected.getClass());
     if (valueType instanceof CSimpleType) {
       assertThat(valueToCheck).isInstanceOf(NumericValue.class);
-      assertThat(valueToCheck.asNumericValue().bigInteger())
-          .isEqualTo(expected.asNumericValue().bigInteger());
+      assertThat(valueToCheck.asNumericValue().bigIntegerValue())
+          .isEqualTo(expected.asNumericValue().bigIntegerValue());
     } else {
       // may be some other type, arrays, structs etc.
       // TODO:
@@ -3903,8 +3957,8 @@ public class SMGCPAValueVisitorTest {
    * @return some Value for the type and input value.
    */
   private @Nullable Value transformInputIntoValue(CType valueType, int numValue) {
-    if (valueType instanceof CSimpleType) {
-      if (((CSimpleType) valueType).isSigned()) {
+    if (valueType instanceof CSimpleType cSimpleType) {
+      if (cSimpleType.hasSignedSpecifier()) {
         // Make every second number negative
         return new NumericValue(numValue % 2 == 0 ? numValue : -numValue);
       } else {
