@@ -10,6 +10,7 @@ package org.sosy_lab.cpachecker.cpa.usage;
 
 import static com.google.common.collect.FluentIterable.from;
 
+import com.google.common.base.Ascii;
 import com.google.common.base.CharMatcher;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Splitter;
@@ -60,7 +61,8 @@ public class BinderFunctionInfo {
       parameterInfo =
           from(Splitter.on(",").splitToList(line))
               .transform(s -> Splitter.on(":").splitToList(s))
-              .transform(s -> Pair.of(Access.valueOf(s.get(0).toUpperCase()), getNumOrDefault(s)))
+              .transform(
+                  s -> Pair.of(Access.valueOf(Ascii.toUpperCase(s.getFirst())), getNumOrDefault(s)))
               .toList();
 
       line = pConfig.getProperty(name + ".linkInfo");
@@ -75,7 +77,7 @@ public class BinderFunctionInfo {
         for (int i = 0; i < 2; i++) {
           pOption = Splitter.on(":").splitToList(options.get(i));
           int dereference = getNumOrDefault(pOption);
-          lInfo[i] = new LinkerInfo(Integer.parseInt(pOption.get(0)), dereference);
+          lInfo[i] = new LinkerInfo(Integer.parseInt(pOption.getFirst()), dereference);
         }
         linkInfo = Pair.of(lInfo[0], lInfo[1]);
       } else {
