@@ -54,12 +54,13 @@ public class CallstackFilter extends GenericFilter<String> {
     if (notSelfParallelFunctions.contains(pFirstPathCore)
         && pFirstPathCore.equals(pSecondPathCore)) {
       return false;
-    } else if (singleThreadFunctions.contains(pFirstPathCore)
+    }
+    if (singleThreadFunctions.contains(pFirstPathCore)
         || singleThreadFunctions.contains(pSecondPathCore)) {
       return false;
-    } else {
-      return true;
     }
+
+    return true;
   }
 
   @Override
@@ -70,7 +71,7 @@ public class CallstackFilter extends GenericFilter<String> {
     // TODO Now I believe, it is enough to check the last function called from main - this is
     // related to the call stack
     if (callerFunctions.size() >= 1) {
-      return callerFunctions.get(callerFunctions.size() - 1);
+      return callerFunctions.getLast();
     } else {
       // Usage in main
       return null;
