@@ -12,26 +12,29 @@ import static com.google.common.base.Preconditions.checkNotNull;
 
 import com.google.common.base.Joiner;
 import com.google.common.base.Preconditions;
+import com.google.common.base.Predicates;
 import com.google.common.base.Splitter;
+import java.io.Serial;
 import java.io.Serializable;
-import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.sosy_lab.common.collect.PathCopyingPersistentTreeMap;
 import org.sosy_lab.common.collect.PersistentMap;
 import org.sosy_lab.common.log.LogManager;
+import org.sosy_lab.cpachecker.cfa.ast.AIdExpression;
 import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
-import org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpression.BinaryOperator;
 import org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpressionBuilder;
+import org.sosy_lab.cpachecker.cfa.ast.c.CEnumerator;
 import org.sosy_lab.cpachecker.cfa.ast.c.CExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFloatLiteralExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CIdExpression;
@@ -45,7 +48,6 @@ import org.sosy_lab.cpachecker.cfa.types.Type;
 import org.sosy_lab.cpachecker.cfa.types.c.CBitFieldType;
 import org.sosy_lab.cpachecker.cfa.types.c.CElaboratedType;
 import org.sosy_lab.cpachecker.cfa.types.c.CEnumType;
-import org.sosy_lab.cpachecker.cfa.types.c.CEnumType.CEnumerator;
 import org.sosy_lab.cpachecker.cfa.types.c.CNumericTypes;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CStorageClass;
@@ -66,10 +68,12 @@ import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
 import org.sosy_lab.cpachecker.cpa.value.type.Value;
 import org.sosy_lab.cpachecker.exceptions.InvalidQueryException;
 import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
+import org.sosy_lab.cpachecker.util.ast.AstCfaRelation;
+import org.sosy_lab.cpachecker.util.expressions.And;
 import org.sosy_lab.cpachecker.util.expressions.ExpressionTree;
-import org.sosy_lab.cpachecker.util.expressions.ExpressionTreeFactory;
 import org.sosy_lab.cpachecker.util.expressions.ExpressionTrees;
 import org.sosy_lab.cpachecker.util.expressions.LeafExpression;
+import org.sosy_lab.cpachecker.util.floatingpoint.FloatValue;
 import org.sosy_lab.cpachecker.util.predicates.smt.BitvectorFormulaManagerView;
 import org.sosy_lab.cpachecker.util.predicates.smt.FloatingPointFormulaManagerView;
 import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
@@ -92,7 +96,7 @@ public final class ValueAnalysisState
         LatticeAbstractState<ValueAnalysisState>,
         PseudoPartitionable {
 
-  private static final long serialVersionUID = -3152134511524554358L;
+  @Serial private static final long serialVersionUID = -3152134511524554358L;
 
   private static final Set<MemoryLocation> blacklist = new HashSet<>();
 
@@ -204,13 +208,11 @@ public final class ValueAnalysisState
       if (pValue.isNumericValue()) {
         CIntegerLiteralExpression valueAsExpression =
             new CIntegerLiteralExpression(
-                FileLocation.DUMMY,
-                memLocType,
-                BigInteger.valueOf(pValue.asNumericValue().longValue()));
+                FileLocation.DUMMY, memLocType, pValue.asNumericValue().bigIntegerValue());
         try {
           typedValue = pValueVisitor.evaluate(valueAsExpression, memLocType);
-        } catch (UnrecognizedCodeException pE) {
-          throw new AssertionError(pE);
+        } catch (UnrecognizedCodeException e) {
+          throw new AssertionError(e);
         }
       }
       MemoryLocation currMemloc = entry.getKey();
@@ -327,10 +329,10 @@ public final class ValueAnalysisState
   }
 
   /**
-   * This method checks whether or not the given Memory Location is contained in this state.
+   * This method checks whether the given Memory Location is contained in this state.
    *
    * @param pMemoryLocation the location in the Memory to check for
-   * @return true, if the variable is contained, else false
+   * @return whether the variable is contained
    */
   public boolean contains(MemoryLocation pMemoryLocation) {
     return constantsMap.containsKey(pMemoryLocation);
@@ -433,12 +435,7 @@ public final class ValueAnalysisState
     if (this == other) {
       return true;
     }
-
-    if (other == null) {
-      return false;
-    }
-
-    if (!getClass().equals(other.getClass())) {
+    if (other == null || getClass() != other.getClass()) {
       return false;
     }
 
@@ -529,7 +526,8 @@ public final class ValueAnalysisState
               + "\" is invalid. Could not split the property string correctly.");
     } else {
       // The following is a hack
-      ValueAndType val = constantsMap.get(MemoryLocation.parseExtendedQualifiedName(parts.get(0)));
+      ValueAndType val =
+          constantsMap.get(MemoryLocation.parseExtendedQualifiedName(parts.getFirst()));
       if (val == null) {
         return false;
       }
@@ -598,7 +596,7 @@ public final class ValueAnalysisState
                   + pModification
                   + "\" is invalid. Could not split the property string correctly.");
         } else {
-          String varName = assignmentParts.get(0);
+          String varName = assignmentParts.getFirst();
           try {
             Value newValue = new NumericValue(Long.parseLong(assignmentParts.get(1)));
             this.assignConstant(varName, newValue);
@@ -622,6 +620,25 @@ public final class ValueAnalysisState
 
   @Override
   public BooleanFormula getFormulaApproximation(FormulaManagerView manager) {
+    return getFormulaApproximationWithSpecifiedVars(manager, Predicates.alwaysTrue(), true);
+  }
+
+  @Override
+  public BooleanFormula getScopedFormulaApproximation(
+      final FormulaManagerView pManager, final FunctionEntryNode pFunctionScope) {
+    return getFormulaApproximationWithSpecifiedVars(
+        pManager,
+        memLoc ->
+            !memLoc.getIdentifier().startsWith("__CPAchecker_TMP_")
+                && (!memLoc.isOnFunctionStack()
+                    || memLoc.isOnFunctionStack(pFunctionScope.getFunctionName())),
+        false);
+  }
+
+  private BooleanFormula getFormulaApproximationWithSpecifiedVars(
+      final FormulaManagerView manager,
+      final Predicate<MemoryLocation> considerVar,
+      final boolean useQualifiedNames) {
     BooleanFormulaManager bfmgr = manager.getBooleanFormulaManager();
     if (machineModel == null) {
       return bfmgr.makeTrue();
@@ -632,50 +649,55 @@ public final class ValueAnalysisState
     FloatingPointFormulaManagerView floatFMGR = manager.getFloatingPointFormulaManager();
 
     for (Entry<MemoryLocation, ValueAndType> entry : constantsMap.entrySet()) {
-      NumericValue num = entry.getValue().getValue().asNumericValue();
+      MemoryLocation memoryLocation = entry.getKey();
+      if (considerVar.test(memoryLocation)) {
+        NumericValue num = entry.getValue().getValue().asNumericValue();
 
-      if (num != null) {
-        MemoryLocation memoryLocation = entry.getKey();
-        Type type = entry.getValue().getType();
-        if (!memoryLocation.isReference() && type instanceof CSimpleType) {
-          CSimpleType simpleType = (CSimpleType) type;
-          if (simpleType.getType().isIntegerType()) {
-            int bitSize = machineModel.getSizeof(simpleType) * machineModel.getSizeofCharInBits();
-            BitvectorFormula var =
-                bitvectorFMGR.makeVariable(bitSize, entry.getKey().getExtendedQualifiedName());
+        if (num != null) {
+          Type type = entry.getValue().getType();
+          if (!memoryLocation.isReference() && type instanceof CSimpleType simpleType) {
+            if (simpleType.getType().isIntegerType()) {
+              int bitSize = machineModel.getSizeof(simpleType) * machineModel.getSizeofCharInBits();
+              BitvectorFormula var =
+                  bitvectorFMGR.makeVariable(
+                      bitSize,
+                      useQualifiedNames
+                          ? entry.getKey().getExtendedQualifiedName()
+                          : entry.getKey().getIdentifier());
 
-            Number value = num.getNumber();
-            final BitvectorFormula val;
-            if (value instanceof BigInteger) {
-              val = bitvectorFMGR.makeBitvector(bitSize, (BigInteger) value);
+              Number value = num.getNumber();
+              final BitvectorFormula val;
+              if (value instanceof BigInteger bigInteger) {
+                val = bitvectorFMGR.makeBitvector(bitSize, bigInteger);
+              } else {
+                val = bitvectorFMGR.makeBitvector(bitSize, num.longValue());
+              }
+              result.add(bitvectorFMGR.equal(var, val));
+            } else if (simpleType.getType().isFloatingPointType()) {
+              final FloatingPointType fpType =
+                  switch (simpleType.getType()) {
+                    case FLOAT -> FormulaType.getSinglePrecisionFloatingPointType();
+                    case DOUBLE -> FormulaType.getDoublePrecisionFloatingPointType();
+                    default ->
+                        throw new AssertionError("Unsupported floating point type: " + simpleType);
+                  };
+              FloatingPointFormula var =
+                  floatFMGR.makeVariable(
+                      useQualifiedNames
+                          ? entry.getKey().getExtendedQualifiedName()
+                          : entry.getKey().getIdentifier(),
+                      fpType);
+              FloatingPointFormula val = floatFMGR.makeNumber(num.doubleValue(), fpType);
+              result.add(floatFMGR.equalWithFPSemantics(var, val));
             } else {
-              val = bitvectorFMGR.makeBitvector(bitSize, num.longValue());
+              // ignore in formula-approximation
             }
-            result.add(bitvectorFMGR.equal(var, val));
-          } else if (simpleType.getType().isFloatingPointType()) {
-            final FloatingPointType fpType;
-            switch (simpleType.getType()) {
-              case FLOAT:
-                fpType = FormulaType.getSinglePrecisionFloatingPointType();
-                break;
-              case DOUBLE:
-                fpType = FormulaType.getDoublePrecisionFloatingPointType();
-                break;
-              default:
-                throw new AssertionError("Unsupported floating point type: " + simpleType);
-            }
-            FloatingPointFormula var =
-                floatFMGR.makeVariable(entry.getKey().getExtendedQualifiedName(), fpType);
-            FloatingPointFormula val = floatFMGR.makeNumber(num.doubleValue(), fpType);
-            result.add(floatFMGR.equalWithFPSemantics(var, val));
           } else {
             // ignore in formula-approximation
           }
         } else {
           // ignore in formula-approximation
         }
-      } else {
-        // ignore in formula-approximation
       }
     }
 
@@ -712,7 +734,7 @@ public final class ValueAnalysisState
   }
 
   public Set<Entry<MemoryLocation, ValueAndType>> getConstants() {
-    return Collections.unmodifiableSet(constantsMap.entrySet());
+    return constantsMap.entrySet();
   }
 
   /**
@@ -787,18 +809,66 @@ public final class ValueAnalysisState
     return this;
   }
 
-  @Override
-  public ExpressionTree<Object> getFormulaApproximation(
-      FunctionEntryNode pFunctionScope, CFANode pLocation) {
-
-    if (machineModel == null) {
-      return ExpressionTrees.getTrue();
-    }
-
+  private Optional<CExpression> buildConstraint(CExpression pVar, CType pCType, NumericValue pNum) {
+    // TODO: Refactor the whole code to also handle JExpressions i.e. change CExpression to
+    //  AExpression
     // TODO: Get real logger
     CBinaryExpressionBuilder builder =
         new CBinaryExpressionBuilder(machineModel, LogManager.createNullLogManager());
-    ExpressionTreeFactory<Object> factory = ExpressionTrees.newFactory();
+    FileLocation loc = pVar.getFileLocation();
+    CExpression val = null;
+    if (pCType instanceof CSimpleType simpleType) {
+      if (simpleType.getType().isIntegerType()) {
+        BigInteger value = getBigIntFromIntegerNumber(pNum.getNumber());
+        val = new CIntegerLiteralExpression(loc, simpleType, value);
+      } else if (simpleType.getType().isFloatingPointType()) {
+        FloatValue.Format precision = FloatValue.Format.fromCType(machineModel, simpleType);
+        val =
+            new CFloatLiteralExpression(
+                loc, machineModel, simpleType, pNum.floatingPointValue(precision));
+      } else {
+        throw new AssertionError("Unexpected type: " + simpleType);
+      }
+    } else if (pCType instanceof CEnumType enumType) {
+      BigInteger value = getBigIntFromIntegerNumber(pNum.getNumber());
+      for (CEnumerator enumerator : enumType.getEnumerators()) {
+        if (value.equals(enumerator.getValue())) {
+          val = new CIdExpression(loc, enumerator);
+          break;
+        }
+      }
+      if (val == null) {
+        val = new CIntegerLiteralExpression(loc, enumType, value);
+      }
+    } else {
+      // disabled since this blocks too many programs for which plenty other information
+      // would be available, so just skip the current variable
+
+      // throw new AssertionError("Unknown arithmetic type: " + cType);
+
+      return Optional.empty();
+    }
+    return Optional.of(builder.buildBinaryExpressionUnchecked(pVar, val, BinaryOperator.EQUALS));
+  }
+
+  private BigInteger getBigIntFromIntegerNumber(Number pNum) {
+    if (pNum instanceof BigInteger bigInteger) {
+      return bigInteger;
+    } else {
+      return BigInteger.valueOf(pNum.longValue());
+    }
+  }
+
+  private ExpressionTree<Object> getFormulaApproximation(
+      FunctionEntryNode pFunctionScope,
+      CFANode pLocation,
+      Function<String, Boolean> variableNameIScope,
+      Function<String, String> variableRenamingFunction)
+      throws TranslationToExpressionTreeFailedException {
+    if (machineModel == null) {
+      throw new TranslationToExpressionTreeFailedException("MachineModel is not available.");
+    }
+
     List<ExpressionTree<Object>> result = new ArrayList<>();
 
     for (Entry<MemoryLocation, ValueAndType> entry : constantsMap.entrySet()) {
@@ -812,9 +882,8 @@ public final class ValueAnalysisState
         Type type = entry.getValue().getType();
         if (!memoryLocation.isReference()
             && memoryLocation.isOnFunctionStack(pFunctionScope.getFunctionName())
-            && type instanceof CType
+            && type instanceof CType cType
             && CTypes.isArithmeticType((CType) type)) {
-          CType cType = (CType) type;
           if (cType instanceof CBitFieldType) {
             cType = ((CBitFieldType) cType).getType();
           }
@@ -823,71 +892,120 @@ public final class ValueAnalysisState
           }
           assert cType != null && CTypes.isArithmeticType(cType);
           String id = memoryLocation.getIdentifier();
-          if (!pFunctionScope.getReturnVariable().isPresent()
-              || !id.equals(pFunctionScope.getReturnVariable().get().getName())) {
+          if (variableNameIScope.apply(id)) {
             FileLocation loc =
                 pLocation.getNumEnteringEdges() > 0
                     ? pLocation.getEnteringEdge(0).getFileLocation()
                     : pFunctionScope.getFileLocation();
+            String newVariableName = variableRenamingFunction.apply(id);
             CVariableDeclaration decl =
                 new CVariableDeclaration(
                     loc,
                     false,
                     CStorageClass.AUTO,
                     cType,
-                    id,
-                    id,
+                    newVariableName,
+                    newVariableName,
                     memoryLocation.getExtendedQualifiedName(),
                     null);
             CExpression var = new CIdExpression(loc, decl);
-            CExpression val = null;
-            if (cType instanceof CSimpleType) {
-              CSimpleType simpleType = (CSimpleType) type;
-              if (simpleType.getType().isIntegerType()) {
-                long value = num.getNumber().longValue();
-                val = new CIntegerLiteralExpression(loc, simpleType, BigInteger.valueOf(value));
-              } else if (simpleType.getType().isFloatingPointType()) {
-                double value = num.getNumber().doubleValue();
-                if (((Double) value).isNaN() || ((Double) value).isInfinite()) {
-                  // Cannot represent this here
-                  continue;
-                }
-                val = new CFloatLiteralExpression(loc, simpleType, BigDecimal.valueOf(value));
-              } else {
-                throw new AssertionError("Unexpected type: " + simpleType);
-              }
-            } else if (cType instanceof CEnumType) {
-              CEnumType enumType = (CEnumType) cType;
-              Long value = num.getNumber().longValue();
-              for (CEnumerator enumerator : enumType.getEnumerators()) {
-                if (enumerator.getValue() == value) {
-                  val = new CIdExpression(loc, enumerator);
-                  break;
-                }
-              }
-              if (val == null) {
-                val = new CIntegerLiteralExpression(loc, enumType, BigInteger.valueOf(value));
-              }
-            } else {
-              // disabled since this blocks too many programs for which plenty other information
-              // would be available, so just skip the current variable
-
-              // throw new AssertionError("Unknown arithmetic type: " + cType);
-
-              continue;
+            Optional<CExpression> constraint = buildConstraint(var, cType, num);
+            if (constraint.isPresent()) {
+              result.add(LeafExpression.of(constraint.orElseThrow()));
             }
-            CBinaryExpression exp =
-                builder.buildBinaryExpressionUnchecked(var, val, BinaryOperator.EQUALS);
-            result.add(LeafExpression.of(exp));
           }
         }
       }
     }
-    return factory.and(result);
+    return And.of(result);
+  }
+
+  @Override
+  public ExpressionTree<Object> getFormulaApproximationAllVariablesInFunctionScope(
+      FunctionEntryNode pFunctionScope, CFANode pLocation)
+      throws TranslationToExpressionTreeFailedException {
+    return getFormulaApproximation(
+        pFunctionScope,
+        pLocation,
+        varName ->
+            pFunctionScope.getReturnVariable().isEmpty()
+                || !varName.equals(pFunctionScope.getReturnVariable().get().getName()),
+        Function.identity());
+  }
+
+  @Override
+  public ExpressionTree<Object> getFormulaApproximationInputProgramInScopeVariables(
+      FunctionEntryNode pFunctionScope,
+      CFANode pLocation,
+      AstCfaRelation pAstCfaRelation,
+      boolean useOldKeywordForVariables)
+      throws InterruptedException,
+          ReportingMethodNotImplementedException,
+          TranslationToExpressionTreeFailedException {
+
+    return getFormulaApproximation(
+        pFunctionScope,
+        pLocation,
+        varName ->
+            (pFunctionScope.getReturnVariable().isEmpty()
+                    || !varName.equals(pFunctionScope.getReturnVariable().get().getName()))
+                && pAstCfaRelation
+                    .getVariablesAndParametersInScope(pLocation)
+                    .orElseThrow()
+                    .anyMatch(v -> v.getName().equals(varName))
+                && !varName.contains("__CPAchecker_"),
+        varName -> useOldKeywordForVariables ? "\\old(" + varName + ")" : varName);
+  }
+
+  @Override
+  public ExpressionTree<Object> getFormulaApproximationFunctionReturnVariableOnly(
+      FunctionEntryNode pFunctionScope, AIdExpression pFunctionReturnVariable)
+      throws TranslationToExpressionTreeFailedException {
+    if (machineModel == null) {
+      throw new TranslationToExpressionTreeFailedException("MachineModel is not available.");
+    }
+
+    ExpressionTree<Object> result = ExpressionTrees.getTrue();
+
+    for (Entry<MemoryLocation, ValueAndType> entry : constantsMap.entrySet()) {
+      Value valueOfEntry = entry.getValue().getValue();
+      if (valueOfEntry instanceof EnumConstantValue) {
+        continue;
+      }
+      NumericValue num = valueOfEntry.asNumericValue();
+      if (num != null) {
+        MemoryLocation memoryLocation = entry.getKey();
+        Type type = entry.getValue().getType();
+        if (!memoryLocation.isReference()
+            && memoryLocation.isOnFunctionStack(pFunctionScope.getFunctionName())
+            && type instanceof CType cType
+            && CTypes.isArithmeticType((CType) type)) {
+          if (cType instanceof CBitFieldType) {
+            cType = ((CBitFieldType) cType).getType();
+          }
+          if (cType instanceof CElaboratedType) {
+            cType = ((CElaboratedType) cType).getRealType();
+          }
+          assert cType != null && CTypes.isArithmeticType(cType);
+          String id = memoryLocation.getIdentifier();
+          if (pFunctionScope.getReturnVariable().isPresent()
+              && id.equals(pFunctionScope.getReturnVariable().orElseThrow().getName())
+              && pFunctionReturnVariable instanceof CIdExpression var) {
+            Optional<CExpression> constraint = buildConstraint(var, cType, num);
+            if (constraint.isPresent()) {
+              result = LeafExpression.of(constraint.orElseThrow());
+              break;
+            }
+          }
+        }
+      }
+    }
+
+    return result;
   }
 
   public static class ValueAndType implements Serializable {
-    private static final long serialVersionUID = 1L;
+    @Serial private static final long serialVersionUID = 1L;
     private final Value value;
     private final Type type;
 
@@ -909,12 +1027,9 @@ public final class ValueAnalysisState
       if (this == o) {
         return true;
       }
-      if (!(o instanceof ValueAndType)) {
-        return false;
-      }
-
-      ValueAndType other = (ValueAndType) o;
-      return Objects.equals(value, other.value) && Objects.equals(type, other.type);
+      return o instanceof ValueAndType other
+          && Objects.equals(value, other.value)
+          && Objects.equals(type, other.type);
     }
 
     @Override
