@@ -10,6 +10,7 @@ package org.sosy_lab.cpachecker.util.predicates.interpolation;
 
 import static com.google.common.base.Verify.verify;
 import static com.google.common.collect.FluentIterable.from;
+import static org.sosy_lab.common.collect.Collections3.listAndElement;
 import static org.sosy_lab.cpachecker.util.statistics.StatisticsUtils.div;
 
 import com.google.common.base.Preconditions;
@@ -20,7 +21,6 @@ import com.google.common.collect.Iterators;
 import com.google.common.collect.Lists;
 import com.google.common.primitives.ImmutableIntArray;
 import com.google.common.primitives.Ints;
-import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -60,7 +60,6 @@ import org.sosy_lab.cpachecker.exceptions.RefinementFailedException;
 import org.sosy_lab.cpachecker.exceptions.RefinementFailedException.Reason;
 import org.sosy_lab.cpachecker.util.LoopStructure;
 import org.sosy_lab.cpachecker.util.Pair;
-import org.sosy_lab.cpachecker.util.Triple;
 import org.sosy_lab.cpachecker.util.predicates.interpolation.strategy.ITPStrategy;
 import org.sosy_lab.cpachecker.util.predicates.interpolation.strategy.NestedInterpolation;
 import org.sosy_lab.cpachecker.util.predicates.interpolation.strategy.SequentialInterpolation;
@@ -281,33 +280,22 @@ public final class InterpolationManager {
     } else {
       // important to use daemon threads here, because we never have the chance to stop the executor
       executor =
-          Executors.newSingleThreadExecutor(new ThreadFactoryBuilder().setDaemon(true).build());
+          Executors.newSingleThreadExecutor(
+              Thread.ofPlatform().daemon().name(getClass().getSimpleName() + "-thread").factory());
     }
 
     interpolator = null;
 
-    switch (strategy) {
-      case SEQ_CPACHECKER:
-        itpStrategy = new SequentialInterpolation(pLogger, pShutdownNotifier, fmgr, config);
-        break;
-      case SEQ:
-        itpStrategy = new SequentialInterpolationWithSolver(pLogger, pShutdownNotifier, fmgr);
-        break;
-      case TREE_WELLSCOPED:
-        itpStrategy = new WellScopedInterpolation(pLogger, pShutdownNotifier, fmgr);
-        break;
-      case TREE_NESTED:
-        itpStrategy = new NestedInterpolation(pLogger, pShutdownNotifier, fmgr);
-        break;
-      case TREE_CPACHECKER:
-        itpStrategy = new TreeInterpolation(pLogger, pShutdownNotifier, fmgr);
-        break;
-      case TREE:
-        itpStrategy = new TreeInterpolationWithSolver(pLogger, pShutdownNotifier, fmgr);
-        break;
-      default:
-        throw new AssertionError("unknown interpolation strategy");
-    }
+    itpStrategy =
+        switch (strategy) {
+          case SEQ_CPACHECKER ->
+              new SequentialInterpolation(pLogger, pShutdownNotifier, fmgr, config);
+          case SEQ -> new SequentialInterpolationWithSolver(pLogger, pShutdownNotifier, fmgr);
+          case TREE_WELLSCOPED -> new WellScopedInterpolation(pLogger, pShutdownNotifier, fmgr);
+          case TREE_NESTED -> new NestedInterpolation(pLogger, pShutdownNotifier, fmgr);
+          case TREE_CPACHECKER -> new TreeInterpolation(pLogger, pShutdownNotifier, fmgr);
+          case TREE -> new TreeInterpolationWithSolver(pLogger, pShutdownNotifier, fmgr);
+        };
   }
 
   /**
@@ -347,7 +335,9 @@ public final class InterpolationManager {
       try {
         return callable.call();
       } catch (Exception e) {
-        Throwables.propagateIfPossible(e, CPAException.class, InterruptedException.class);
+        Throwables.throwIfInstanceOf(e, CPAException.class);
+        Throwables.throwIfInstanceOf(e, InterruptedException.class);
+        Throwables.throwIfUnchecked(e);
         throw new UnexpectedCheckedException("refinement", e);
       }
     }
@@ -367,8 +357,9 @@ public final class InterpolationManager {
 
     } catch (ExecutionException e) {
       Throwable t = e.getCause();
-      Throwables.propagateIfPossible(t, CPAException.class, InterruptedException.class);
-
+      Throwables.throwIfInstanceOf(t, CPAException.class);
+      Throwables.throwIfInstanceOf(t, InterruptedException.class);
+      Throwables.throwIfUnchecked(t);
       throw new UnexpectedCheckedException("interpolation", t);
     }
   }
@@ -424,6 +415,23 @@ public final class InterpolationManager {
       final Optional<ARGPath> imprecisePath)
       throws RefinementFailedException, InterruptedException {
 
+    if (pFormulas.getSize() == 1) {
+      // If there is only one block, interpolation is meaningless because the list of expected
+      // interpolants is empty. In principle, using the Interpolator below would work fine,
+      // but for formulas with floats, MathSAT fails to return a result for UNSAT formulas
+      // because it would not be able to compute interpolants afterward. So we use a
+      // non-interpolating solver. This could also be slightly more efficient. We miss out on any
+      // of the advanced heuristics like environment reuse, but for a single block there wouldn't be
+      // anything to reuse anyway.
+      CounterexampleTraceInfo cex =
+          buildCounterexampleTraceWithoutInterpolation0(pFormulas, imprecisePath);
+      if (cex.isSpurious()) {
+        return CounterexampleTraceInfo.infeasible(ImmutableList.of());
+      } else {
+        return cex;
+      }
+    }
+
     cexAnalysisTimer.start();
     try {
       final BlockFormulas f = prepareCounterexampleFormulas(pFormulas);
@@ -449,7 +457,7 @@ public final class InterpolationManager {
               "Interpolation failed, attempting to solve without interpolation");
           return fallbackWithoutInterpolation(f, imprecisePath, itpException);
         }
-        throw new RefinementFailedException(Reason.InterpolationFailed, null, itpException);
+        throw RefinementFailedException.forInterpolationFailureInSolver(itpException, solver);
       }
 
     } finally {
@@ -484,7 +492,7 @@ public final class InterpolationManager {
 
   private CounterexampleTraceInfo buildCounterexampleTraceWithoutInterpolation0(
       final BlockFormulas pFormulas, Optional<ARGPath> imprecisePath)
-      throws CPAException, InterruptedException {
+      throws RefinementFailedException, InterruptedException {
 
     cexAnalysisTimer.start();
     try {
@@ -494,7 +502,7 @@ public final class InterpolationManager {
         return solveCounterexample(f, imprecisePath);
       } catch (SolverException e) {
         // TODO: Do we need to rebuild the interpolator here? i.e. is it ever used again?
-        throw new RefinementFailedException(Reason.InterpolationFailed, null, e);
+        throw RefinementFailedException.forInterpolationFailureInSolver(e, solver);
       }
 
     } finally {
@@ -548,7 +556,7 @@ public final class InterpolationManager {
       // in case of exception throw original one below but do not forget e2
       itpException.addSuppressed(solvingException);
     }
-    throw new RefinementFailedException(Reason.InterpolationFailed, null, itpException);
+    throw RefinementFailedException.forInterpolationFailureInSolver(itpException, solver);
   }
 
   /**
@@ -610,10 +618,7 @@ public final class InterpolationManager {
     if (!bfmgr.isTrue(bitwiseAxioms)) {
       logger.log(
           Level.ALL, "DEBUG_3", "ADDING BITWISE AXIOMS TO THE", "LAST GROUP: ", bitwiseAxioms);
-      return ImmutableList.<BooleanFormula>builderWithExpectedSize(f.size())
-          .addAll(f.subList(0, f.size() - 1))
-          .add(bfmgr.and(f.get(f.size() - 1), bitwiseAxioms))
-          .build();
+      return listAndElement(f.subList(0, f.size() - 1), bfmgr.and(f.getLast(), bitwiseAxioms));
     }
 
     return f;
@@ -765,8 +770,7 @@ public final class InterpolationManager {
    * @return A list of (N-1) interpolants for N formulae.
    */
   private <T> List<BooleanFormula> getInterpolants(
-      Interpolator<T> pInterpolator,
-      List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds)
+      Interpolator<T> pInterpolator, List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds)
       throws SolverException, InterruptedException {
 
     final List<BooleanFormula> interpolants;
@@ -797,7 +801,7 @@ public final class InterpolationManager {
    *
    * @param formulas The list of formulas on the path.
    * @param pProver The solver.
-   * @param pImprecisePath A optional (potentially infeasible) path to the target state. If given,
+   * @param pImprecisePath An optional (potentially infeasible) path to the target state. If given,
    *     the model of the prover environment is used to determine a feasible path through the ARG to
    *     the same target state.
    * @return Information about the error path, including a satisfying assignment.
@@ -892,7 +896,7 @@ public final class InterpolationManager {
     /**
      * Builds a new solver environment out of the old environment and replaces the old. Also asserts
      * all formulas currently on the assertion stack and calls isUnsat() once on the new
-     * environment. Deletes old environment afterwards. The currentlyAssertedFormulas are updated as
+     * environment. Deletes old environment afterward. The currentlyAssertedFormulas are updated as
      * well. Should be used after an interpolation failed with an exception.
      *
      * @throws InterruptedException solver specific
@@ -943,7 +947,7 @@ public final class InterpolationManager {
       // for every block of the counterexample (in correct order).
       // It is initialized with {@code null} and filled while the formulas are pushed on the solver
       // stack.
-      final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds =
+      final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds =
           new ArrayList<>(Collections.nCopies(formulas.getSize(), null));
 
       ImmutableIntArray formulaPermutation;
@@ -970,7 +974,7 @@ public final class InterpolationManager {
                 pAbstractionStates,
                 formulaPermutation,
                 formulasWithStatesAndGroupdIds);
-        assert Lists.transform(formulasWithStatesAndGroupdIds, Triple::getFirst)
+        assert Lists.transform(formulasWithStatesAndGroupdIds, InterpolationGroup::formula)
             .equals(formulas.getFormulas());
 
       } finally {
@@ -1019,7 +1023,7 @@ public final class InterpolationManager {
                     pAbstractionStates,
                     formulaPermutation,
                     formulasWithStatesAndGroupdIds);
-            assert Lists.transform(formulasWithStatesAndGroupdIds, Triple::getFirst)
+            assert Lists.transform(formulasWithStatesAndGroupdIds, InterpolationGroup::formula)
                 .equals(formulas.getFormulas());
             verify(spurious, "Counterexample formulas became satisfiable on second try");
 
@@ -1059,13 +1063,13 @@ public final class InterpolationManager {
      * @param formulasWithStatesAndGroupdIds The list where to store the references (in original
      *     order) to the interpolation groups. This is just a list of 'identifiers' for the
      *     formulas.
-     * @return True if the formulas are unsatisfiable.
+     * @return whether the formulas are unsatisfiable.
      */
     private boolean checkInfeasabilityOfTrace(
         final List<BooleanFormula> traceFormulas,
         final List<AbstractState> traceStates,
         final ImmutableIntArray formulaPermutation,
-        final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds)
+        final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds)
         throws InterruptedException, SolverException {
 
       // first identify which formulas are already on the solver stack,
@@ -1088,24 +1092,24 @@ public final class InterpolationManager {
 
       // we have to do the sat check every time, as it could be that also
       // with incremental checking it was missing (when the path is infeasible
-      // and formulas get pushed afterwards)
+      // and formulas get pushed afterward)
       return itpProver.isUnsat();
     }
 
     /**
-     * For optimization we try to share the solver stack between different solver calls. Before
+     * For optimization, we try to share the solver stack between different solver calls. Before
      * pushing a new set of formulas, we need to determine all old formulas that need to be popped
      * from the solver stack.
      *
      * @param formulasWithStatesAndGroupdIds the new sorted collection of formulas, with indizes
-     * @param todoIterator iterator producing the indices of formulas to be used, afterwards it is
+     * @param todoIterator iterator producing the indices of formulas to be used, afterward it is
      *     positioned at the new starting point
      */
     private int getIndexOfFirstNonReusableFormula(
         final List<BooleanFormula> traceFormulas,
         final List<AbstractState> traceStates,
         final ListIterator<Integer> todoIterator,
-        final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds) {
+        final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds) {
 
       ListIterator<Pair<BooleanFormula, T>> assertedIterator =
           currentlyAssertedFormulas.listIterator();
@@ -1124,8 +1128,8 @@ public final class InterpolationManager {
 
         if (todoFormula.equals(assertedFormula.getFirst())) {
           // formula is already in solver stack in correct location
-          final Triple<BooleanFormula, AbstractState, T> assertedFormulaWithState =
-              Triple.of(
+          final InterpolationGroup<T> assertedFormulaWithState =
+              new InterpolationGroup<>(
                   assertedFormula.getFirst(), traceStates.get(index), assertedFormula.getSecond());
           formulasWithStatesAndGroupdIds.set(index, assertedFormulaWithState);
 
@@ -1183,7 +1187,7 @@ public final class InterpolationManager {
         final List<BooleanFormula> traceFormulas,
         final List<AbstractState> traceStates,
         final ListIterator<Integer> todoIterator,
-        final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds)
+        final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds)
         throws SolverException, InterruptedException {
       boolean isStillFeasible = true;
 
@@ -1202,7 +1206,7 @@ public final class InterpolationManager {
         assert formulasWithStatesAndGroupdIds.get(index) == null;
         logger.logf(Level.ALL, "Pushing formula for block %s:\n  %s", index, f);
         T itpGroupId = itpProver.push(f);
-        formulasWithStatesAndGroupdIds.set(index, Triple.of(f, state, itpGroupId));
+        formulasWithStatesAndGroupdIds.set(index, new InterpolationGroup<>(f, state, itpGroupId));
         currentlyAssertedFormulas.add(Pair.of(f, itpGroupId));
 
         // We need to iterate through the full loop
