@@ -32,7 +32,7 @@ import org.sosy_lab.cpachecker.cfa.model.FunctionExitNode;
 import org.sosy_lab.cpachecker.core.interfaces.AbstractState;
 import org.sosy_lab.cpachecker.util.AbstractStates;
 import org.sosy_lab.cpachecker.util.Pair;
-import org.sosy_lab.cpachecker.util.Triple;
+import org.sosy_lab.cpachecker.util.predicates.interpolation.InterpolationGroup;
 import org.sosy_lab.cpachecker.util.predicates.interpolation.InterpolationManager;
 import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
 import org.sosy_lab.cpachecker.util.predicates.smt.Solver;
@@ -66,12 +66,12 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
   @Override
   public <T> void checkInterpolants(
       final Solver solver,
-      final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds,
+      final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds,
       final List<BooleanFormula> interpolants)
       throws SolverException, InterruptedException {
 
     final List<BooleanFormula> formulas =
-        Lists.transform(formulasWithStatesAndGroupdIds, Triple::getFirst);
+        Lists.transform(formulasWithStatesAndGroupdIds, InterpolationGroup::formula);
     final ImmutableIntArray subtrees =
         buildTreeStructure(formulasWithStatesAndGroupdIds).getSecond();
 
@@ -83,16 +83,16 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
     // (D) variables/symbols in each interpolant are part of both partitions
 
     // PROBLEM: we rebuild some interpolants before returning them from {@getInterpolants()}.
-    // Thus the check might fail. TODO check this!
+    // Thus, the check might fail. TODO check this!
 
     assert formulas.size() == subtrees.length() : "each formula must be part of a subtree";
     assert formulas.size() == interpolants.size() + 1
         : "number of interpolants should match the tree-structure";
 
     // check (A)
-    if (!solver.implies(formulas.get(0), interpolants.get(0))) {
+    if (!solver.implies(formulas.getFirst(), interpolants.getFirst())) {
       throw new SolverException(
-          String.format("interpolant %s is not implied by leaf formula.", interpolants.get(0)));
+          String.format("interpolant %s is not implied by leaf formula.", interpolants.getFirst()));
     }
     for (int i = 1; i < subtrees.length() - 1; i++) {
       if (subtrees.get(i) > subtrees.get(i - 1)) {
@@ -204,12 +204,11 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
     END // node with several children, end of a subtree
   }
 
-  /** returns the current position in a interpolation tree. */
+  /** returns the current position in an interpolation tree. */
   private static <T> TreePosition getTreePosition(
-      final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds,
-      final int position) {
+      final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds, final int position) {
     final AbstractState abstractionState =
-        checkNotNull(formulasWithStatesAndGroupdIds.get(position).getSecond());
+        checkNotNull(formulasWithStatesAndGroupdIds.get(position).state());
     final CFANode node = AbstractStates.extractLocation(abstractionState);
     if (node instanceof FunctionEntryNode
         && callHasReturn(formulasWithStatesAndGroupdIds, position)) {
@@ -223,25 +222,22 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
 
   /** check, if there exists a function-exit-node to the current call-node. */
   protected static <T> boolean callHasReturn(
-      final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds,
-      int callIndex) {
+      final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds, int callIndex) {
     // TODO caching as optimization to reduce from  k*O(n)  to  O(n)+k*O(1)  ?
     final Deque<CFANode> callstack = new ArrayDeque<>();
 
     {
-      final AbstractState abstractionState =
-          formulasWithStatesAndGroupdIds.get(callIndex).getSecond();
+      final AbstractState abstractionState = formulasWithStatesAndGroupdIds.get(callIndex).state();
       final CFANode node = AbstractStates.extractLocation(abstractionState);
       assert node instanceof FunctionEntryNode : "call needed as input param";
       callstack.addLast(node);
     }
 
     // walk along path and track the call stack
-    for (Triple<BooleanFormula, AbstractState, T> t :
-        Iterables.skip(formulasWithStatesAndGroupdIds, callIndex + 1)) {
+    for (InterpolationGroup<T> t : Iterables.skip(formulasWithStatesAndGroupdIds, callIndex + 1)) {
       assert !callstack.isEmpty() : "should have returned when callstack is empty";
 
-      final AbstractState abstractionState = checkNotNull(t.getSecond());
+      final AbstractState abstractionState = checkNotNull(t.state());
       final CFANode node = AbstractStates.extractLocation(abstractionState);
 
       if (node instanceof FunctionEntryNode) {
@@ -249,8 +245,8 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
       }
 
       final CFANode lastEntryNode = callstack.getLast();
-      if ((node instanceof FunctionExitNode
-          && ((FunctionExitNode) node).getEntryNode().equals(lastEntryNode))
+      if ((node instanceof FunctionExitNode functionExitNode
+          && functionExitNode.getEntryNode().equals(lastEntryNode))
       // || (node.getEnteringSummaryEdge() != null
       // && node.getEnteringSummaryEdge().getPredecessor().getLeavingEdge(0).getSuccessor() ==
       // lastEntryNode)
@@ -279,57 +275,44 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
    *     tree-element is the asserted formula (as normal formula for logging and as ITP-group) and
    *     the corresponding abstract state.
    */
-  protected <T>
-      Pair<List<Triple<BooleanFormula, AbstractState, T>>, ImmutableIntArray> buildTreeStructure(
-          final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds) {
+  protected <T> Pair<List<InterpolationGroup<T>>, ImmutableIntArray> buildTreeStructure(
+      final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds) {
 
-    final List<Triple<BooleanFormula, AbstractState, T>> formulas = new ArrayList<>();
+    final List<InterpolationGroup<T>> formulas = new ArrayList<>();
     final ImmutableIntArray.Builder startOfSubTree = ImmutableIntArray.builder();
-    final Deque<Pair<Triple<BooleanFormula, AbstractState, T>, Integer>> stack = new ArrayDeque<>();
-    final Pair<Triple<BooleanFormula, AbstractState, T>, Integer> leftMostSubtree =
-        Pair.of(formulasWithStatesAndGroupdIds.get(0), 0); // initial element of the tree
+    final Deque<Pair<InterpolationGroup<T>, Integer>> stack = new ArrayDeque<>();
+    final Pair<InterpolationGroup<T>, Integer> leftMostSubtree =
+        Pair.of(formulasWithStatesAndGroupdIds.getFirst(), 0); // initial element of the tree
 
     stack.add(leftMostSubtree); // every tree starts at the left-most node, post-order!
     for (int positionOfA = 0; positionOfA < formulasWithStatesAndGroupdIds.size(); positionOfA++) {
       // first element is handled before
 
-      final Triple<BooleanFormula, AbstractState, T> formula =
-          formulasWithStatesAndGroupdIds.get(positionOfA);
+      final InterpolationGroup<T> formula = formulasWithStatesAndGroupdIds.get(positionOfA);
 
       switch (getTreePosition(formulasWithStatesAndGroupdIds, positionOfA)) {
-        case START:
-          {
+        case START ->
             // start new left subtree, i.e. next formula is left leaf of a subtree.
             // current formula will be used as merge-formula (common root of new subtree and
             // previous formulas)
             stack.addLast(Pair.of(formula, formulas.size()));
-            break;
-          }
-        case END:
-          {
-            // first add the last inner formula
-            startOfSubTree.add(stack.getLast().getSecond());
-            formulas.add(formula);
+        case END -> {
+          // first add the last inner formula
+          startOfSubTree.add(stack.getLast().getSecond());
+          formulas.add(formula);
 
-            // then add the common root (merge-formula)
-            final Pair<Triple<BooleanFormula, AbstractState, T>, Integer> commonRoot =
-                stack.removeLast();
-            startOfSubTree.add(stack.getLast().getSecond());
-            formulas.add(commonRoot.getFirst());
+          // then add the common root (merge-formula)
+          final Pair<InterpolationGroup<T>, Integer> commonRoot = stack.removeLast();
+          startOfSubTree.add(stack.getLast().getSecond());
+          formulas.add(commonRoot.getFirst());
 
-            assert commonRoot.getSecond() >= stack.getLast().getSecond()
-                : "adding a complete subtree can only be done on the right side";
-
-            break;
-          }
-        case MIDDLE:
-          {
-            startOfSubTree.add(stack.getLast().getSecond());
-            formulas.add(formula);
-            break;
-          }
-        default:
-          throw new AssertionError();
+          assert commonRoot.getSecond() >= stack.getLast().getSecond()
+              : "adding a complete subtree can only be done on the right side";
+        }
+        case MIDDLE -> {
+          startOfSubTree.add(stack.getLast().getSecond());
+          formulas.add(formula);
+        }
       }
     }
     ImmutableIntArray resultingStartOfSubtree = startOfSubTree.build();
@@ -338,7 +321,7 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
         "invalid number of tree elements: %s",
         resultingStartOfSubtree);
 
-    final Pair<Triple<BooleanFormula, AbstractState, T>, Integer> last = stack.removeLast();
+    final Pair<InterpolationGroup<T>, Integer> last = stack.removeLast();
     assert last == leftMostSubtree : "root must start at left-most subtree";
     assert stack.isEmpty()
         : "after building the tree-structure there should not be formulas on the stack";
@@ -355,9 +338,9 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
   }
 
   /**
-   * The default Predicate Analysis can only handle a flat list of interpolants. Thus we convert the
-   * tree-structure back into a linear chain of interpolants. The analysis must handle special cases
-   * on its own, i.e. use BAM with function-rebuilding.
+   * The default Predicate Analysis can only handle a flat list of interpolants. Thus, we convert
+   * the tree-structure back into a linear chain of interpolants. The analysis must handle special
+   * cases on its own, i.e. use BAM with function-rebuilding.
    *
    * <p>For function-entries (START-point) we use TRUE, for function-returns (END-point) both
    * function-summary and function-execution (merged into one formula).
@@ -367,7 +350,7 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
    * @return interpolants linear chain of interpolants, created from the tree-interpolants
    */
   protected <T> List<BooleanFormula> flattenTreeItps(
-      final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds,
+      final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds,
       final List<BooleanFormula> itps) {
 
     assert itps.size() == formulasWithStatesAndGroupdIds.size() - 1
@@ -382,29 +365,17 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
         positionOfA++) {
       // last interpolant would be False.
 
-      final BooleanFormula itp;
-      switch (getTreePosition(formulasWithStatesAndGroupdIds, positionOfA)) {
-        case START:
-          {
-            itp = bfmgr.makeTrue();
-            break;
-          }
-        case END:
-          {
-            // add the last inner formula and the common root (merge-formula)
-            final BooleanFormula functionSummary = iter.next();
-            final BooleanFormula functionExecution = iter.next();
-            itp = rebuildInterpolant(functionSummary, functionExecution);
-            break;
-          }
-        case MIDDLE:
-          {
-            itp = iter.next();
-            break;
-          }
-        default:
-          throw new AssertionError();
-      }
+      final BooleanFormula itp =
+          switch (getTreePosition(formulasWithStatesAndGroupdIds, positionOfA)) {
+            case START -> bfmgr.makeTrue();
+            case END -> {
+              // add the last inner formula and the common root (merge-formula)
+              final BooleanFormula functionSummary = iter.next();
+              final BooleanFormula functionExecution = iter.next();
+              yield rebuildInterpolant(functionSummary, functionExecution);
+            }
+            case MIDDLE -> iter.next();
+          };
       interpolants.add(itp);
     }
 
@@ -415,7 +386,7 @@ public abstract class AbstractTreeInterpolation extends ITPStrategy {
 
   /**
    * We need all atoms of both interpolants in one formula, If one of the formulas is True or False,
-   * we do not get Atoms from it. Thus we remove those cases.
+   * we do not get Atoms from it. Thus, we remove those cases.
    */
   protected BooleanFormula rebuildInterpolant(
       final BooleanFormula functionSummary, final BooleanFormula functionExecution) {
