@@ -17,8 +17,7 @@ import java.util.Set;
 import java.util.logging.Level;
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.log.LogManager;
-import org.sosy_lab.cpachecker.core.interfaces.AbstractState;
-import org.sosy_lab.cpachecker.util.Triple;
+import org.sosy_lab.cpachecker.util.predicates.interpolation.InterpolationGroup;
 import org.sosy_lab.cpachecker.util.predicates.interpolation.InterpolationManager;
 import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
 import org.sosy_lab.cpachecker.util.predicates.smt.Solver;
@@ -54,7 +53,7 @@ public abstract class ITPStrategy {
    */
   public abstract <T> List<BooleanFormula> getInterpolants(
       final InterpolationManager.Interpolator<T> interpolator,
-      final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStateAndGroupId)
+      final List<InterpolationGroup<T>> formulasWithStateAndGroupId)
       throws InterruptedException, SolverException;
 
   /**
@@ -71,12 +70,12 @@ public abstract class ITPStrategy {
    */
   public <T> void checkInterpolants(
       final Solver solver,
-      final List<Triple<BooleanFormula, AbstractState, T>> formulasWithStatesAndGroupdIds,
+      final List<InterpolationGroup<T>> formulasWithStatesAndGroupdIds,
       final List<BooleanFormula> interpolants)
       throws InterruptedException, SolverException {
 
     final List<BooleanFormula> formulas =
-        Lists.transform(formulasWithStatesAndGroupdIds, Triple::getFirst);
+        Lists.transform(formulasWithStatesAndGroupdIds, InterpolationGroup::formula);
 
     final int n = interpolants.size();
     assert n == (formulas.size() - 1);
@@ -87,11 +86,11 @@ public abstract class ITPStrategy {
     // (C)                          itp_{n-1} & f_n => false
 
     // Check (A)
-    if (!solver.implies(formulas.get(0), interpolants.get(0))) {
+    if (!solver.implies(formulas.getFirst(), interpolants.getFirst())) {
       throw new SolverException(
           String.format(
               "First interpolant '%s' is not implied by first formula '%s'.",
-              interpolants.get(0), formulas.get(0)));
+              interpolants.getFirst(), formulas.getFirst()));
     }
 
     // Check (B).
@@ -145,10 +144,6 @@ public abstract class ITPStrategy {
                 + Sets.difference(variablesInInterpolant, allowedVariables));
       }
     }
-  }
-
-  protected static <T1, T2, T3> List<T3> projectToThird(final List<Triple<T1, T2, T3>> l) {
-    return Lists.transform(l, Triple::getThird);
   }
 
   /**
