@@ -8,13 +8,20 @@
 
 package org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula;
 
+import static com.google.common.base.Verify.verify;
 import static org.sosy_lab.cpachecker.util.BuiltinFloatFunctions.getTypeOfBuiltinFloatFunction;
 import static org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula.CtoFormulaTypeUtils.getRealFieldOwner;
+import static org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula.FormulaEncodingOptions.INTERNAL_NONDET_FUNCTION_NAME;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import java.math.BigInteger;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.BiFunction;
 import java.util.logging.Level;
 import org.checkerframework.checker.nullness.qual.Nullable;
@@ -23,6 +30,7 @@ import org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpression.BinaryOperator;
 import org.sosy_lab.cpachecker.cfa.ast.c.CCastExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CCharLiteralExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CDeclaration;
+import org.sosy_lab.cpachecker.cfa.ast.c.CEnumerator;
 import org.sosy_lab.cpachecker.cfa.ast.c.CExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFieldReference;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFloatLiteralExpression;
@@ -39,17 +47,29 @@ import org.sosy_lab.cpachecker.cfa.ast.c.CUnaryExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CUnaryExpression.UnaryOperator;
 import org.sosy_lab.cpachecker.cfa.ast.c.DefaultCExpressionVisitor;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
-import org.sosy_lab.cpachecker.cfa.types.c.CEnumType.CEnumerator;
+import org.sosy_lab.cpachecker.cfa.types.BaseSizeofVisitor;
+import org.sosy_lab.cpachecker.cfa.types.MachineModel;
+import org.sosy_lab.cpachecker.cfa.types.c.CArrayType;
+import org.sosy_lab.cpachecker.cfa.types.c.CComplexType.ComplexTypeKind;
+import org.sosy_lab.cpachecker.cfa.types.c.CCompositeType;
+import org.sosy_lab.cpachecker.cfa.types.c.CCompositeType.CCompositeTypeMemberDeclaration;
+import org.sosy_lab.cpachecker.cfa.types.c.CElaboratedType;
+import org.sosy_lab.cpachecker.cfa.types.c.CFunctionType;
 import org.sosy_lab.cpachecker.cfa.types.c.CNumericTypes;
 import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypedefType;
 import org.sosy_lab.cpachecker.cfa.types.c.CTypes;
+import org.sosy_lab.cpachecker.exceptions.NoException;
 import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
 import org.sosy_lab.cpachecker.exceptions.UnsupportedCodeException;
 import org.sosy_lab.cpachecker.util.BuiltinFloatFunctions;
 import org.sosy_lab.cpachecker.util.BuiltinFunctions;
+import org.sosy_lab.cpachecker.util.floatingpoint.FloatValue;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.ErrorConditions;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.SSAMap.SSAMapBuilder;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.PointerTargetSetBuilder;
 import org.sosy_lab.cpachecker.util.predicates.smt.BitvectorFormulaManagerView;
 import org.sosy_lab.cpachecker.util.predicates.smt.BooleanFormulaManagerView;
 import org.sosy_lab.cpachecker.util.predicates.smt.FloatingPointFormulaManagerView;
@@ -57,6 +77,8 @@ import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
 import org.sosy_lab.java_smt.api.BitvectorFormula;
 import org.sosy_lab.java_smt.api.BooleanFormula;
 import org.sosy_lab.java_smt.api.FloatingPointFormula;
+import org.sosy_lab.java_smt.api.FloatingPointFormulaManager;
+import org.sosy_lab.java_smt.api.FloatingPointNumber;
 import org.sosy_lab.java_smt.api.FloatingPointRoundingMode;
 import org.sosy_lab.java_smt.api.Formula;
 import org.sosy_lab.java_smt.api.FormulaType;
@@ -73,6 +95,8 @@ public class ExpressionToFormulaVisitor
   private final Constraints constraints;
   protected final FormulaManagerView mgr;
   protected final SSAMapBuilder ssa;
+  private final PointerTargetSetBuilder pts;
+  private final ErrorConditions errorConditions;
 
   public ExpressionToFormulaVisitor(
       CtoFormulaConverter pCtoFormulaConverter,
@@ -80,7 +104,9 @@ public class ExpressionToFormulaVisitor
       CFAEdge pEdge,
       String pFunction,
       SSAMapBuilder pSsa,
-      Constraints pConstraints) {
+      PointerTargetSetBuilder pPts,
+      Constraints pConstraints,
+      ErrorConditions pErrorConditions) {
 
     conv = pCtoFormulaConverter;
     edge = pEdge;
@@ -88,6 +114,8 @@ public class ExpressionToFormulaVisitor
     ssa = pSsa;
     constraints = pConstraints;
     mgr = pFmgr;
+    pts = pPts;
+    errorConditions = pErrorConditions;
   }
 
   @Override
@@ -106,12 +134,6 @@ public class ExpressionToFormulaVisitor
     final CType t = e.getExpressionType();
     Formula f = toFormula(e);
     return conv.makeCast(t, calculationType, f, constraints, edge);
-  }
-
-  private Formula getPointerTargetSizeLiteral(
-      final CPointerType pointerType, final CType implicitType) {
-    final long pointerTargetSize = conv.getSizeof(pointerType.getType());
-    return mgr.makeNumber(conv.getFormulaTypeFromCType(implicitType), pointerTargetSize);
   }
 
   private CType getPromotedTypeForArithmetic(CExpression exp) {
@@ -160,14 +182,12 @@ public class ExpressionToFormulaVisitor
     final FormulaType<?> returnFormulaType = conv.getFormulaTypeFromCType(returnType);
 
     final boolean signed;
-    if (calculationType instanceof CSimpleType) {
-      // this only gives the right value for "signed" because calculationType was determined using
-      // getCanonicalType, which e.g. converts a CNumericType.INT into a CNumericType.SIGNED_INT:
-      signed = conv.machineModel.isSigned((CSimpleType) calculationType);
-    } else if (calculationType instanceof CPointerType) {
-      // pointers can also be signed if the machine model represents them using a signed type:
-      signed = conv.machineModel.getPointerEquivalentSimpleType().getCanonicalType().isSigned();
+    if (calculationType instanceof CSimpleType cSimpleType) {
+      signed = conv.machineModel.isSigned(cSimpleType);
     } else {
+      // For pointers: happens only for additions/subtractions (for which signedness is irrelevant)
+      // and comparisons. GCC implements pointer comparisons as unsigned.
+      // For other types like structs signedness should be irrelevant as well.
       signed = false;
     }
 
@@ -178,31 +198,25 @@ public class ExpressionToFormulaVisitor
     final Formula ret;
 
     switch (op) {
-      case PLUS:
+      case PLUS -> {
         if (!(promT1 instanceof CPointerType)
             && !(promT2 instanceof CPointerType)) { // Just an addition e.g. 6 + 7
           ret = mgr.makePlus(f1, f2);
-        } else if (!(promT2 instanceof CPointerType)) {
+        } else if (!(promT2 instanceof CPointerType cPointerType)) {
           // operand1 is a pointer => we should multiply the second summand by the size of the
           // pointer target
           ret =
               mgr.makePlus(
-                  f1,
-                  mgr.makeMultiply(
-                      f2, getPointerTargetSizeLiteral((CPointerType) promT1, calculationType)));
+                  f1, mgr.makeMultiply(f2, getSizeExpression(((CPointerType) promT1).getType())));
         } else if (!(promT1 instanceof CPointerType)) {
           // operand2 is a pointer => we should multiply the first summand by the size of the
           // pointer target
-          ret =
-              mgr.makePlus(
-                  f2,
-                  mgr.makeMultiply(
-                      f1, getPointerTargetSizeLiteral((CPointerType) promT2, calculationType)));
+          ret = mgr.makePlus(f2, mgr.makeMultiply(f1, getSizeExpression(cPointerType.getType())));
         } else {
           throw new UnrecognizedCodeException("Can't add pointers", edge, exp);
         }
-        break;
-      case MINUS:
+      }
+      case MINUS -> {
         if (!(promT1 instanceof CPointerType)
             && !(promT2 instanceof CPointerType)) { // Just a subtraction e.g. 6 - 7
           ret = mgr.makeMinus(f1, f2);
@@ -211,17 +225,13 @@ public class ExpressionToFormulaVisitor
           // target
           ret =
               mgr.makeMinus(
-                  f1,
-                  mgr.makeMultiply(
-                      f2, getPointerTargetSizeLiteral((CPointerType) promT1, calculationType)));
-        } else if (promT1 instanceof CPointerType) {
+                  f1, mgr.makeMultiply(f2, getSizeExpression(((CPointerType) promT1).getType())));
+        } else if (promT1 instanceof CPointerType cPointerType) {
           // Pointer subtraction => (operand1 - operand2) / sizeof (*operand1)
           if (promT1.equals(promT2)) {
             ret =
                 mgr.makeDivide(
-                    mgr.makeMinus(f1, f2),
-                    getPointerTargetSizeLiteral((CPointerType) promT1, calculationType),
-                    true);
+                    mgr.makeMinus(f1, f2), getSizeExpression(cPointerType.getType()), true);
           } else {
             throw new UnrecognizedCodeException(
                 "Can't subtract pointers of different types", edge, exp);
@@ -230,78 +240,43 @@ public class ExpressionToFormulaVisitor
           throw new UnrecognizedCodeException(
               "Can't subtract a pointer from a non-pointer", edge, exp);
         }
-        break;
-      case MULTIPLY:
-        ret = mgr.makeMultiply(f1, f2);
-        break;
-      case DIVIDE:
-        ret = mgr.makeDivide(f1, f2, signed);
-        break;
-      case MODULO:
-        ret = mgr.makeModulo(f1, f2, signed);
+      }
+      case MULTIPLY -> ret = mgr.makeMultiply(f1, f2);
+      case DIVIDE -> ret = mgr.makeDivide(f1, f2, signed);
+      case MODULO -> {
+        // Modulo in C is remainder in SMTLIB2
+        ret = mgr.makeRemainder(f1, f2, signed);
 
         addModuloConstraints(exp, f1, f2, signed, ret);
-
-        break;
-      case BINARY_AND:
-        ret = mgr.makeAnd(f1, f2);
-        break;
-      case BINARY_OR:
-        ret = mgr.makeOr(f1, f2);
-        break;
-      case BINARY_XOR:
-        ret = mgr.makeXor(f1, f2);
-        break;
-      case SHIFT_LEFT:
-
-        // NOTE: The type of the result is that of the promoted left operand. (6.5.7 3)
-        ret = mgr.makeShiftLeft(f1, f2);
-        break;
-      case SHIFT_RIGHT:
-        // NOTE: The type of the result is that of the promoted left operand. (6.5.7 3)
-        ret = mgr.makeShiftRight(f1, f2, signed);
-        break;
-
-      case GREATER_THAN:
-      case GREATER_EQUAL:
-      case LESS_THAN:
-      case LESS_EQUAL:
-      case EQUALS:
-      case NOT_EQUALS:
-        {
-          BooleanFormula result;
-          switch (op) {
-            case GREATER_THAN:
-              result = mgr.makeGreaterThan(f1, f2, signed);
-              break;
-            case GREATER_EQUAL:
-              result = mgr.makeGreaterOrEqual(f1, f2, signed);
-              break;
-            case LESS_THAN:
-              result = mgr.makeLessThan(f1, f2, signed);
-              break;
-            case LESS_EQUAL:
-              result = mgr.makeLessOrEqual(f1, f2, signed);
-              break;
-            case EQUALS:
-              result = handleEquals(exp, f1, f2);
-              break;
-            case NOT_EQUALS:
-              result = conv.bfmgr.not(mgr.makeEqual(f1, f2));
-              break;
-            default:
-              throw new AssertionError();
-          }
-
-          // Here we directly use the returnFormulaType instead of the calculcationType
-          // to avoid a useless cast.
-          // However, this means that we may not call makeCast() below
-          // because it expects the input in the calculationType.
-          // So we return here directly.
-          return conv.ifTrueThenOneElseZero(returnFormulaType, result);
-        }
-      default:
-        throw new UnrecognizedCodeException("Unknown binary operator", edge, exp);
+      }
+      case BINARY_AND -> ret = mgr.makeAnd(f1, f2);
+      case BINARY_OR -> ret = mgr.makeOr(f1, f2);
+      case BINARY_XOR -> ret = mgr.makeXor(f1, f2);
+      case SHIFT_LEFT ->
+          // NOTE: The type of the result is that of the promoted left operand. (6.5.7 3)
+          ret = mgr.makeShiftLeft(f1, f2);
+      case SHIFT_RIGHT ->
+          // NOTE: The type of the result is that of the promoted left operand. (6.5.7 3)
+          ret = mgr.makeShiftRight(f1, f2, signed);
+      case GREATER_THAN, GREATER_EQUAL, LESS_THAN, LESS_EQUAL, EQUALS, NOT_EQUALS -> {
+        BooleanFormula result =
+            switch (op) {
+              case GREATER_THAN -> mgr.makeGreaterThan(f1, f2, signed);
+              case GREATER_EQUAL -> mgr.makeGreaterOrEqual(f1, f2, signed);
+              case LESS_THAN -> mgr.makeLessThan(f1, f2, signed);
+              case LESS_EQUAL -> mgr.makeLessOrEqual(f1, f2, signed);
+              case EQUALS -> handleEquals(exp, f1, f2);
+              case NOT_EQUALS -> conv.bfmgr.not(mgr.makeEqual(f1, f2));
+              default -> throw new AssertionError();
+            };
+        // Here we directly use the returnFormulaType instead of the calculcationType
+        // to avoid a useless cast.
+        // However, this means that we may not call makeCast() below
+        // because it expects the input in the calculationType.
+        // So we return here directly.
+        return conv.ifTrueThenOneElseZero(returnFormulaType, result);
+      }
+      default -> throw new UnrecognizedCodeException("Unknown binary operator", edge, exp);
     }
 
     // The CalculationType could be different from returnType, so we cast the result.
@@ -319,7 +294,7 @@ public class ExpressionToFormulaVisitor
     CExpression e1 = exp.getOperand1();
     CExpression e2 = exp.getOperand2();
     if (e2.equals(CIntegerLiteralExpression.ZERO)
-        && e1 instanceof CBinaryExpression
+        && e1 instanceof CBinaryExpression or
         && ((CBinaryExpression) e1).getOperator() == BinaryOperator.BINARY_OR) {
       // This is code like "(a | b) == 0".
       // According to LDV, GCC sometimes produces this during weaving,
@@ -327,7 +302,6 @@ public class ExpressionToFormulaVisitor
       // TODO Maybe refactor AutomatonASTComparator into something generic
       // and use this to match such cases.
 
-      final CBinaryExpression or = (CBinaryExpression) e1;
       final Formula zero = f2;
       final Formula a =
           processOperand(or.getOperand1(), exp.getCalculationType(), exp.getExpressionType());
@@ -340,8 +314,8 @@ public class ExpressionToFormulaVisitor
   }
 
   /**
-   * Some solvers (Mathsat, Princess) do not support MODULO and replace it with an UF. Thus, we
-   * limit the result of the UF with additional constraints.
+   * Some solvers (Mathsat, Princess) do not support MODULO/REMAINDER and replace it with an UF.
+   * Thus, we limit the result of the UF with additional constraints.
    */
   private void addModuloConstraints(
       final CBinaryExpression exp,
@@ -351,9 +325,9 @@ public class ExpressionToFormulaVisitor
       final Formula ret) {
     BooleanFormulaManagerView bfmgr = mgr.getBooleanFormulaManager();
 
-    if (exp.getOperand2() instanceof CIntegerLiteralExpression) {
+    if (exp.getOperand2() instanceof CIntegerLiteralExpression cIntegerLiteralExpression) {
       // We use a BigInteger because it can always be made positive, this is not true for type long!
-      BigInteger modulo = ((CIntegerLiteralExpression) exp.getOperand2()).getValue();
+      BigInteger modulo = cIntegerLiteralExpression.getValue();
       if (!modulo.equals(BigInteger.ZERO)) {
         // modular congruence expects a positive modulo. If our divisor b in a%b is negative, we
         // actually want to generate a modular congruence condition mod (-b):
@@ -411,15 +385,9 @@ public class ExpressionToFormulaVisitor
   @Override
   public Formula visit(CIdExpression idExp) throws UnrecognizedCodeException {
 
-    if (idExp.getDeclaration() instanceof CEnumerator) {
-      CEnumerator enumerator = (CEnumerator) idExp.getDeclaration();
+    if (idExp.getDeclaration() instanceof CEnumerator enumerator) {
       CType t = idExp.getExpressionType();
-      if (enumerator.hasValue()) {
-        return mgr.makeNumber(conv.getFormulaTypeFromCType(t), enumerator.getValue());
-      } else {
-        // We don't know the value here, but we know it is constant.
-        return conv.makeConstant(enumerator.getName(), t);
-      }
+      return mgr.makeNumber(conv.getFormulaTypeFromCType(t), enumerator.getValue());
     }
 
     return conv.makeVariable(
@@ -435,9 +403,9 @@ public class ExpressionToFormulaVisitor
     }
 
     CExpression fieldRef = fExp.getFieldOwner();
-    if (fieldRef instanceof CIdExpression) {
-      CSimpleDeclaration decl = ((CIdExpression) fieldRef).getDeclaration();
-      if (decl instanceof CDeclaration && ((CDeclaration) decl).isGlobal()) {
+    if (fieldRef instanceof CIdExpression cIdExpression) {
+      CSimpleDeclaration decl = cIdExpression.getDeclaration();
+      if (decl instanceof CDeclaration cDeclaration && cDeclaration.isGlobal()) {
         // this is the reference to a global field variable
 
         // we can omit the warning (no pointers involved),
@@ -470,89 +438,192 @@ public class ExpressionToFormulaVisitor
 
   @Override
   public Formula visit(CFloatLiteralExpression fExp) throws UnrecognizedCodeException {
-    FormulaType<?> t = conv.getFormulaTypeFromCType(fExp.getExpressionType());
-    return mgr.getFloatingPointFormulaManager().makeNumber(fExp.getValue(), (FloatingPointType) t);
+    FloatingPointFormulaManager fmgr = mgr.getFloatingPointFormulaManager();
+    FloatValue value = fExp.getValue();
+    FloatingPointNumber converted = value.toFloatingPointNumber();
+
+    return fmgr.makeNumber(
+        converted.getExponent(),
+        converted.getMantissa(),
+        converted.getSign(),
+        FormulaType.getFloatingPointType(value.getFormat().expBits(), value.getFormat().sigBits()));
   }
 
   @Override
   public Formula visit(CStringLiteralExpression lexp) throws UnrecognizedCodeException {
     // we create a string constant representing the given
     // string literal
-    return conv.makeStringLiteral(lexp.getValue());
+    return conv.makeStringLiteral(lexp.getContentWithNullTerminator(), constraints);
   }
 
   @Override
   public Formula visit(CUnaryExpression exp) throws UnrecognizedCodeException {
     CExpression operand = exp.getOperand();
     UnaryOperator op = exp.getOperator();
-    switch (op) {
-      case MINUS:
-      case TILDE:
-        {
-          // Handle Integer Promotion
-          CType t = operand.getExpressionType();
-          CType promoted = t.getCanonicalType();
-          if (CTypes.isIntegerType(promoted)) {
-            // Integer types smaller than int are promoted when an operation is performed on them.
-            promoted = conv.machineModel.applyIntegerPromotion(promoted);
-          }
-          Formula operandFormula = toFormula(operand);
-          operandFormula = conv.makeCast(t, promoted, operandFormula, constraints, edge);
-          Formula ret;
-          if (op == UnaryOperator.MINUS) {
-            ret = mgr.makeNegate(operandFormula);
-          } else {
-            assert op == UnaryOperator.TILDE : "This case should be impossible because of switch";
-            ret = mgr.makeNot(operandFormula);
-          }
-
-          CType returnType = exp.getExpressionType();
-          FormulaType<?> returnFormulaType = conv.getFormulaTypeFromCType(returnType);
-          if (!returnFormulaType.equals(mgr.getFormulaType(ret))) {
-            ret = conv.makeCast(promoted, returnType, ret, constraints, edge);
-          }
-          assert returnFormulaType.equals(mgr.getFormulaType(ret))
-              : "Returntype "
-                  + returnFormulaType
-                  + " and Formulatype "
-                  + mgr.getFormulaType(ret)
-                  + " do not match in visit(CUnaryExpression) for "
-                  + exp;
-          return ret;
+    return switch (op) {
+      case MINUS, TILDE -> {
+        // Handle Integer Promotion
+        CType t = operand.getExpressionType();
+        CType promoted = t.getCanonicalType();
+        if (CTypes.isIntegerType(promoted)) {
+          // Integer types smaller than int are promoted when an operation is performed on them.
+          promoted = conv.machineModel.applyIntegerPromotion(promoted);
+        }
+        Formula operandFormula = toFormula(operand);
+        operandFormula = conv.makeCast(t, promoted, operandFormula, constraints, edge);
+        Formula ret;
+        if (op == UnaryOperator.MINUS) {
+          ret = mgr.makeNegate(operandFormula);
+        } else {
+          assert op == UnaryOperator.TILDE : "This case should be impossible because of switch";
+          ret = mgr.makeNot(operandFormula);
         }
 
-      case AMPER:
-        return visitDefault(exp);
+        CType returnType = exp.getExpressionType();
+        FormulaType<?> returnFormulaType = conv.getFormulaTypeFromCType(returnType);
+        if (!returnFormulaType.equals(mgr.getFormulaType(ret))) {
+          ret = conv.makeCast(promoted, returnType, ret, constraints, edge);
+        }
+        assert returnFormulaType.equals(mgr.getFormulaType(ret))
+            : "Returntype "
+                + returnFormulaType
+                + " and Formulatype "
+                + mgr.getFormulaType(ret)
+                + " do not match in visit(CUnaryExpression) for "
+                + exp;
+        yield ret;
+      }
+      case AMPER -> visitDefault(exp);
 
-      case SIZEOF:
+      case SIZEOF -> {
         CType lCType = exp.getOperand().getExpressionType();
-        return handleSizeof(exp, lCType);
-
-      case ALIGNOF:
-        return handleAlignOf(exp, exp.getOperand().getExpressionType());
-
-      default:
-        throw new UnrecognizedCodeException("Unknown unary operator", edge, exp);
-    }
+        yield getSizeExpression(lCType);
+      }
+      case ALIGNOF -> handleAlignOf(exp, exp.getOperand().getExpressionType());
+    };
   }
 
   @Override
   public Formula visit(CTypeIdExpression tIdExp) throws UnrecognizedCodeException {
     CType lCType = tIdExp.getType();
 
-    switch (tIdExp.getOperator()) {
-      case SIZEOF:
-        return handleSizeof(tIdExp, lCType);
-      case ALIGNOF:
-        return handleAlignOf(tIdExp, lCType);
-      default:
-        return visitDefault(tIdExp);
+    return switch (tIdExp.getOperator()) {
+      case SIZEOF -> getSizeExpression(lCType);
+      case ALIGNOF -> handleAlignOf(tIdExp, lCType);
+      default -> visitDefault(tIdExp);
+    };
+  }
+
+  /**
+   * This is a SizeofVisitor that always returns 0 for types that do not have a statically known
+   * size.
+   */
+  private static class StaticSizeofVisitor extends BaseSizeofVisitor<NoException> {
+
+    /**
+     * Compute the size of the given composite type excluding all members that do not have a
+     * statically known size.
+     */
+    BigInteger computeStaticSizeof(CCompositeType pType) {
+      // Note that this.visit(pType) would return 0 because pType has !hasKnownConstantSize(),
+      // so we need to call super.visit() here such that only the struct members get handled by
+      // this.visit()
+      return super.visit(pType);
+    }
+
+    private StaticSizeofVisitor(MachineModel pModel) {
+      super(pModel);
+    }
+
+    @Override
+    public BigInteger visit(CArrayType pArrayType) {
+      if (pArrayType.hasKnownConstantSize()) {
+        return super.visit(pArrayType);
+      }
+      return BigInteger.ZERO;
+    }
+
+    @Override
+    public BigInteger visit(CCompositeType pCompositeType) {
+      if (pCompositeType.hasKnownConstantSize()) {
+        return super.visit(pCompositeType);
+      }
+      return BigInteger.ZERO;
     }
   }
 
-  private Formula handleSizeof(CExpression pExp, CType pCType) {
-    return mgr.makeNumber(
-        conv.getFormulaTypeFromCType(pExp.getExpressionType()), conv.getSizeof(pCType));
+  public Formula getSizeExpression(CType type) throws UnrecognizedCodeException {
+    type = type.getCanonicalType();
+    if (type.hasKnownConstantSize()) {
+      return mgr.makeNumber(
+          conv.typeHandler.getPointerType(), conv.typeHandler.getExactSizeof(type));
+
+    } else if (type instanceof CArrayType arrayType) {
+      Formula elementSize = getSizeExpression(arrayType.getType());
+
+      Formula elementCount = arrayType.getLength().accept(this);
+      elementCount =
+          conv.makeCast(
+              arrayType.getLength().getExpressionType(),
+              CPointerType.POINTER_TO_VOID,
+              elementCount,
+              constraints,
+              edge);
+
+      return mgr.makeMultiply(elementSize, elementCount);
+
+    } else if (type instanceof CCompositeType compositeType) {
+      Deque<Formula> memberSizes = new ArrayDeque<>();
+
+      // It is not enough to just compute the sum/maximum over all member sizes because of padding.
+      // But we also do not want to reimplement the complex padding and bitfield computations here.
+      // So we help us with a trick: The next line computes the size of the whole struct/union as if
+      // the variable-length parts would have length 0. But this includes all other fields and all
+      // paddings (even those for variable-length arrays, because padding is always known).
+      // Then we just have to create expressions for the sizes of the variable-length parts and
+      // compute the final sum/maximum.
+      BigInteger staticallyKnownSize =
+          new StaticSizeofVisitor(conv.machineModel).computeStaticSizeof(compositeType);
+
+      for (CCompositeTypeMemberDeclaration member : compositeType.getMembers()) {
+        if (!member.getType().hasKnownConstantSize() && !member.isFlexibleArrayMember()) {
+          // Size is not statically known (exceptions are flexible array members with size 0).
+          memberSizes.add(getSizeExpression(member.getType()));
+        }
+        // else the size is already part of staticallyKnownSize
+      }
+
+      verify(!memberSizes.isEmpty());
+      memberSizes.add(mgr.makeNumber(conv.typeHandler.getPointerType(), staticallyKnownSize));
+
+      // Now compute sum/maximum of memberSizes. Especially for the maximum (with if-then-else)
+      // a balanced tree of nested maximums seems to be likely better for the solver.
+      return switch (compositeType.getKind()) {
+        case STRUCT -> balancedDestructiveReduce(memberSizes, mgr::makePlus);
+        case UNION ->
+            balancedDestructiveReduce(
+                memberSizes,
+                (a, b) -> conv.bfmgr.ifThenElse(mgr.makeGreaterOrEqual(a, b, false), a, b));
+        default -> throw new AssertionError();
+      };
+
+    } else {
+      throw new AssertionError("unexpected type without known constant size: " + type);
+    }
+  }
+
+  /**
+   * Reduce the elements of a given deque in a balanced manner, e.g. for [1,2,3,4] and "+" it will
+   * produce (1+2)+(3+4). The deque will be drained.
+   */
+  private static <T> T balancedDestructiveReduce(
+      Deque<T> deque, BiFunction<? super T, ? super T, ? extends T> reducer) {
+    while (deque.size() > 1) {
+      T a = deque.pollFirst();
+      T b = deque.pollFirst();
+      deque.addLast(reducer.apply(a, b));
+    }
+    return deque.getFirst();
   }
 
   private Formula handleAlignOf(CExpression pExp, CType pCType) {
@@ -569,13 +640,8 @@ public class ExpressionToFormulaVisitor
 
     // First let's handle special cases such as assumes, allocations, nondets, external models, etc.
     final String functionName;
-    if (functionNameExpression instanceof CIdExpression) {
-      functionName = ((CIdExpression) functionNameExpression).getName();
-
-      final String isUnsupported = conv.isUnsupportedFunction(functionName);
-      if (isUnsupported != null) {
-        throw new UnsupportedCodeException(isUnsupported, edge, e);
-      }
+    if (functionNameExpression instanceof CIdExpression cIdExpression) {
+      functionName = cIdExpression.getName();
 
       if (conv.options.isNondetFunction(functionName)
           || conv.options.isMemoryAllocationFunction(functionName)
@@ -585,11 +651,86 @@ public class ExpressionToFormulaVisitor
         // Ignore parameters and just create a fresh variable for it.
         return conv.makeNondet(functionName, returnType, ssa, constraints);
 
+      } else if (BuiltinFunctions.matchesFscanf(functionName)) {
+
+        ValidatedFScanFParameter receivingParameter = validateFscanfParameters(parameters, e);
+
+        if (receivingParameter.receiver() instanceof CUnaryExpression unaryParameter) {
+          UnaryOperator operator = unaryParameter.getOperator();
+          CExpression operand = unaryParameter.getOperand();
+          if (operator.equals(UnaryOperator.AMPER)
+              && operand instanceof CIdExpression idExpression) {
+            // For simplicity, we start with the case where only parameters of the form "&id" occur
+            CType variableType = idExpression.getExpressionType();
+
+            if (!isCompatibleWithScanfFormatString(receivingParameter.format(), variableType)) {
+              throw new UnsupportedCodeException(
+                  "fscanf with receiving type <-> format specifier mismatch is not supported.",
+                  edge,
+                  e);
+            }
+
+            CFunctionDeclaration nondetFun =
+                new CFunctionDeclaration(
+                    edge.getFileLocation(),
+                    CFunctionType.functionTypeWithReturnType(variableType),
+                    INTERNAL_NONDET_FUNCTION_NAME,
+                    ImmutableList.of(),
+                    ImmutableSet.of());
+            CIdExpression nondetFunctionName =
+                new CIdExpression(
+                    edge.getFileLocation(), variableType, nondetFun.getName(), nondetFun);
+
+            CFunctionCallExpression rhs =
+                new CFunctionCallExpression(
+                    edge.getFileLocation(),
+                    variableType,
+                    nondetFunctionName,
+                    ImmutableList.of(),
+                    nondetFun);
+            try {
+              BooleanFormula assignment =
+                  conv.makeAssignment(
+                      idExpression,
+                      idExpression,
+                      rhs,
+                      edge,
+                      function,
+                      ssa,
+                      pts,
+                      constraints,
+                      errorConditions);
+              constraints.addConstraint(assignment);
+            } catch (InterruptedException interruptedException) {
+              CtoFormulaConverter.propagateInterruptedException(interruptedException);
+            }
+          } else {
+            throw new UnsupportedCodeException(
+                "Currently, only fscanf with a single parameter of the form &id is supported.",
+                edge,
+                e);
+          }
+        } else {
+          throw new UnsupportedCodeException(
+              "Currently, only fscanf with a single parameter of the form &id is supported.",
+              edge,
+              e);
+        }
+
+        // fscanf(FILE *stream, const char *format, ...) returns the number of assigned items
+        // or EOF if no item has been assigned before the end of the file occurred.
+        // We can over-approximate the value with nondet.
+        return conv.makeNondet(functionName, returnType, ssa, constraints);
+
       } else if (conv.options.isExternModelFunction(functionName)) {
         ExternModelLoader loader = new ExternModelLoader(conv, conv.bfmgr, conv.fmgr);
         BooleanFormula result = loader.handleExternModelFunction(parameters, ssa);
         FormulaType<?> returnFormulaType = conv.getFormulaTypeFromCType(e.getExpressionType());
         return conv.ifTrueThenOneElseZero(returnFormulaType, result);
+
+      } else if (BuiltinFunctions.isSetjmpFunction(functionName)) {
+        // setjmp always returns 0 on the "regular" return, and we don't support longjmp
+        return mgr.makeNumber(conv.getFormulaTypeFromCType(returnType), 0);
 
       } else if (BuiltinFunctions.isPopcountFunction(functionName)) {
         return handlePopCount(functionName, returnType, parameters, e);
@@ -637,7 +778,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula zero =
                 fpfmgr.makeNumber(0.0, (FormulaType.FloatingPointType) formulaType);
             FloatingPointFormula nan = fpfmgr.makeNaN((FormulaType.FloatingPointType) formulaType);
@@ -662,7 +803,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
             FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
             return conv.bfmgr.ifThenElse(
@@ -680,7 +821,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
             FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
             return conv.bfmgr.ifThenElse(
@@ -696,7 +837,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula fp_zero =
                 fpfmgr.makeNumber(0, (FormulaType.FloatingPointType) formulaType);
 
@@ -711,6 +852,31 @@ public class ExpressionToFormulaVisitor
                 zero);
           }
         }
+
+      } else if (BuiltinFloatFunctions.matchesIsInfinitySign(functionName)) {
+
+        if (parameters.size() == 1) {
+          CType paramType = getTypeOfBuiltinFloatFunction(functionName);
+          FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
+          if (formulaType.isFloatingPointType()) {
+            FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
+            FloatingPointFormula param =
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
+            FloatingPointFormula fp_zero =
+                fpfmgr.makeNumber(0, (FormulaType.FloatingPointType) formulaType);
+
+            FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
+            Formula zero = mgr.makeNumber(resultType, 0);
+            Formula one = mgr.makeNumber(resultType, 1);
+            Formula minus_one = mgr.makeNumber(resultType, -1);
+
+            return conv.bfmgr.ifThenElse(
+                fpfmgr.isInfinity(param),
+                conv.bfmgr.ifThenElse(fpfmgr.lessThan(param, fp_zero), minus_one, one),
+                zero);
+          }
+        }
+
       } else if (BuiltinFloatFunctions.matchesFloatClassify(functionName)) {
 
         if (parameters.size() == 1) {
@@ -719,7 +885,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
             FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
             Formula zero = mgr.makeNumber(resultType, 0);
@@ -749,7 +915,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -790,7 +956,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -839,7 +1005,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -861,7 +1027,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -884,7 +1050,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
             FloatingPointFormula zero =
@@ -893,7 +1059,7 @@ public class ExpressionToFormulaVisitor
             BooleanFormula isFirstNaN = fpfmgr.isNaN(param0);
             BooleanFormula isSecondNaN = fpfmgr.isNaN(param1);
 
-            FloatingPointFormula diff;
+            FloatingPointFormula diff = fpfmgr.subtract(param0, param1);
 
             return conv.bfmgr.ifThenElse(
                 isFirstNaN,
@@ -901,10 +1067,7 @@ public class ExpressionToFormulaVisitor
                 conv.bfmgr.ifThenElse(
                     isSecondNaN,
                     param1,
-                    conv.bfmgr.ifThenElse(
-                        fpfmgr.greaterThan((diff = fpfmgr.subtract(param0, param1)), zero),
-                        diff,
-                        zero)));
+                    conv.bfmgr.ifThenElse(fpfmgr.greaterThan(diff, zero), diff, zero)));
           }
         }
       } else if (BuiltinFloatFunctions.matchesIsless(functionName)) {
@@ -947,9 +1110,7 @@ public class ExpressionToFormulaVisitor
             inequalityBuiltin(
                 functionName,
                 parameters,
-                (e1, e2) -> {
-                  return conv.bfmgr.not(fpfmgr.equalWithFPSemantics(e1, e2));
-                },
+                (e1, e2) -> conv.bfmgr.not(fpfmgr.equalWithFPSemantics(e1, e2)),
                 fpfmgr);
 
         if (result != null) {
@@ -963,7 +1124,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param0 =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula param1 =
                 (FloatingPointFormula) processOperand(parameters.get(1), paramType, paramType);
 
@@ -983,7 +1144,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
             FloatingPointFormula fp_zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
 
             FormulaType<?> resultType = conv.getFormulaTypeFromCType(CNumericTypes.INT);
@@ -1014,7 +1175,7 @@ public class ExpressionToFormulaVisitor
           if (formulaType.isFloatingPointType()) {
             FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
             FloatingPointFormula param =
-                (FloatingPointFormula) processOperand(parameters.get(0), paramType, paramType);
+                (FloatingPointFormula) processOperand(parameters.getFirst(), paramType, paramType);
 
             FloatingPointFormula zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
             FloatingPointFormula nan = fpfmgr.makeNaN((FloatingPointType) formulaType);
@@ -1073,6 +1234,14 @@ public class ExpressionToFormulaVisitor
         if (result != null) {
           return result;
         }
+      } else if (functionName.equals("__CPACHECKER_atexit_next")) {
+        // __CPACHECKER_atexit_next is not a constant function, but returns a different function
+        // pointer from the atexit stack every time it is being called. We model this by returning a
+        // fresh variable that may point to any function in the program. The function pointer CPA,
+        // which will be run in parallel, tracks the actual target of the pointer and makes sure
+        // that the right function is always called.
+        return conv.makeNondet(functionName, returnType, ssa, constraints);
+
       } else if (!CtoFormulaConverter.PURE_EXTERNAL_FUNCTIONS.contains(functionName)) {
         if (parameters.isEmpty()) {
           // function of arity 0
@@ -1083,6 +1252,12 @@ public class ExpressionToFormulaVisitor
               Level.INFO, "Assuming external function", functionName, "to be a pure function.");
         }
       }
+
+      final String isUnsupported = conv.isUnsupportedFunction(functionName);
+      if (isUnsupported != null) {
+        throw new UnsupportedCodeException(isUnsupported, edge, e);
+      }
+
     } else {
       conv.logfOnce(
           Level.WARNING,
@@ -1152,6 +1327,90 @@ public class ExpressionToFormulaVisitor
     }
   }
 
+  private record ValidatedFScanFParameter(String format, CExpression receiver) {}
+
+  /**
+   * Checks whether the format specifier in the second argument of fscanf agrees with the type of
+   * the parameter it writes to. Paragraph § 7.21.6.2 (10) of the C Standard says, that input item
+   * read form the stream is converted to the `appropriate` type according to the conversion
+   * specifier, e.g., %d. Further § 7.21.6.2 (11-12) tells us the expected argument (receiver) type
+   * for each argument, corresponding to a conversion specifier and length modifier .The exact
+   * mapping brought forward by the standard is reflected in {@link
+   * BuiltinFunctions#getTypeFromScanfFormatSpecifier(String)}.
+   *
+   * @param formatString the scanf format string
+   * @param pVariableType the type of the receiving variable
+   * @return whether the scanf-format-specifier agrees with the type it writes to
+   * @throws UnsupportedCodeException if the format specifier is not supported
+   */
+  private boolean isCompatibleWithScanfFormatString(String formatString, CType pVariableType)
+      throws UnsupportedCodeException {
+    CType expectedType =
+        BuiltinFunctions.getTypeFromScanfFormatSpecifier(formatString)
+            .orElseThrow(
+                () ->
+                    new UnsupportedCodeException(
+                        "format specifier " + formatString + " not supported.", edge));
+
+    return pVariableType.getCanonicalType().equals(expectedType.getCanonicalType());
+  }
+
+  private ValidatedFScanFParameter validateFscanfParameters(
+      List<CExpression> pParameters, CFunctionCallExpression e) throws UnrecognizedCodeException {
+    if (pParameters.size() < 2) {
+      throw new UnrecognizedCodeException("fscanf() needs at least 2 parameters", edge, e);
+    }
+
+    if (pParameters.size() > 3) {
+      throw new UnsupportedCodeException(
+          "fscanf() with more than 3 parameters is not supported", edge, e);
+    }
+
+    CExpression file = pParameters.getFirst();
+
+    if (file instanceof CIdExpression idExpression) {
+      if (!isFilePointer(idExpression.getExpressionType())) {
+        throw new UnrecognizedCodeException("First parameter of fscanf() must be a FILE*", edge, e);
+      }
+    }
+
+    CExpression format = pParameters.get(1);
+    String formatString =
+        checkFscanfFormatString(format)
+            .orElseThrow(
+                () ->
+                    new UnsupportedCodeException(
+                        "Format string of fscanf is not supported", edge, e));
+
+    return new ValidatedFScanFParameter(formatString, pParameters.get(2));
+  }
+
+  private boolean isFilePointer(CType pType) {
+    if (pType instanceof CPointerType pointerType) {
+      if (pointerType.getType() instanceof CTypedefType typedefType) {
+        CType realType = typedefType.getRealType();
+        if (realType instanceof CElaboratedType elaboratedType) {
+          return elaboratedType.getKind() == ComplexTypeKind.STRUCT
+              && elaboratedType.getName().equals("_IO_FILE");
+        }
+      }
+    }
+    return false;
+  }
+
+  private Optional<String> checkFscanfFormatString(CExpression pFormat) {
+    ImmutableSet<String> allowlistedFormatStrings =
+        BuiltinFunctions.getAllowedScanfFormatSpecifiers();
+    if (pFormat instanceof CStringLiteralExpression stringLiteral) {
+      String content = stringLiteral.getContentWithoutNullTerminator();
+      if (allowlistedFormatStrings.contains(content)) {
+        return Optional.of(content);
+      }
+    }
+
+    return Optional.empty();
+  }
+
   private @Nullable Formula roundNearestTiesAway(
       List<CExpression> pParameters, String pFunctionName, boolean pIsLRound, boolean pIsLongLong)
       throws UnrecognizedCodeException {
@@ -1162,7 +1421,7 @@ public class ExpressionToFormulaVisitor
       if (formulaType.isFloatingPointType()) {
         FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
         FloatingPointFormula param =
-            (FloatingPointFormula) processOperand(pParameters.get(0), paramType, paramType);
+            (FloatingPointFormula) processOperand(pParameters.getFirst(), paramType, paramType);
         FloatingPointFormula zero = fpfmgr.makeNumber(0, (FloatingPointType) formulaType);
         FloatingPointFormula fp_half = fpfmgr.makeNumber(0.5, (FloatingPointType) formulaType);
         FloatingPointFormula fp_neg_half = fpfmgr.makeNumber(-0.5, (FloatingPointType) formulaType);
@@ -1190,7 +1449,7 @@ public class ExpressionToFormulaVisitor
           castPositive = fpfmgr.castTo(rounded_positive_Infinity, signed, type);
         }
 
-        // XXX: Currently MathSAT does not support the rounding mode NEAREST_TIE_AWAY,
+        // XXX: Currently, MathSAT does not support the rounding mode NEAREST_TIE_AWAY,
         // which corresponds to the semantics of 'round'.
         // Hence, we represent those semantics by the formula below, until there
         // is a release of MathSAT supporting NEAREST_TIE_AWAY.
@@ -1237,7 +1496,7 @@ public class ExpressionToFormulaVisitor
       if (formulaType.isFloatingPointType()) {
         FloatingPointFormulaManagerView fpfmgr = mgr.getFloatingPointFormulaManager();
         FloatingPointFormula param =
-            (FloatingPointFormula) processOperand(pParameters.get(0), paramType, paramType);
+            (FloatingPointFormula) processOperand(pParameters.getFirst(), paramType, paramType);
 
         FloatingPointFormula rounded = fpfmgr.round(param, pRoundingMode);
 
@@ -1271,7 +1530,7 @@ public class ExpressionToFormulaVisitor
       FormulaType<?> formulaType = conv.getFormulaTypeFromCType(paramType);
       if (formulaType.isFloatingPointType()) {
         FloatingPointFormula param0 =
-            (FloatingPointFormula) processOperand(pParameters.get(0), paramType, paramType);
+            (FloatingPointFormula) processOperand(pParameters.getFirst(), paramType, paramType);
         FloatingPointFormula param1 =
             (FloatingPointFormula) processOperand(pParameters.get(1), paramType, paramType);
 
@@ -1313,7 +1572,7 @@ public class ExpressionToFormulaVisitor
 
       if (paramFormulaType.isBitvectorType()) {
         BitvectorFormulaManagerView bvMgrv = mgr.getBitvectorFormulaManager();
-        BitvectorFormula bvParameter = (BitvectorFormula) toFormula(pParameters.get(0));
+        BitvectorFormula bvParameter = (BitvectorFormula) toFormula(pParameters.getFirst());
         BitvectorType bvParamType = (BitvectorType) paramFormulaType;
         BitvectorType bvReturnType = (BitvectorType) formulaReturnType;
         int offset = 0;
